auto publishing updates to notebooks

--- a/ar1_bayes.ipynb
+++ b/ar1_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3c19ac4",
+   "id": "5007980c",
    "metadata": {},
    "source": [
     "# Posterior Distributions for  AR(1) Parameters\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194738d6",
+   "id": "69fcaa79",
    "metadata": {
     "hide-output": false
    },
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a810f395",
+   "id": "9d75d29e",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8903c2ed",
+   "id": "d93f7169",
    "metadata": {},
    "source": [
     "This lecture uses Bayesian methods offered by [pymc](https://www.pymc.io/projects/docs/en/stable/) and [numpyro](https://num.pyro.ai/en/stable/) to make statistical inferences about two parameters of a univariate first-order autoregression.\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6080c7e5",
+   "id": "7e8770b2",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec5bab0",
+   "id": "3b6cc9e4",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0329be6f",
+   "id": "4975397b",
    "metadata": {},
    "source": [
     "Now we shall use Bayes’ law to construct a posterior distribution, conditioning on the initial value of $ y_0 $.\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "287851ae",
+   "id": "2dd66b45",
    "metadata": {},
    "source": [
     "## PyMC Implementation\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ebfdd8",
+   "id": "e57c9272",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90996156",
+   "id": "a9f3a795",
    "metadata": {},
    "source": [
     "[pmc.sample](https://www.pymc.io/projects/docs/en/v5.10.0/api/generated/pymc.sample.html#pymc-sample) by default uses the NUTS samplers to generate samples as shown in the below cell:"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "356d6214",
+   "id": "a028b74c",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770f0cde",
+   "id": "f326cee2",
    "metadata": {
     "hide-output": false
    },
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658500ab",
+   "id": "11430d7c",
    "metadata": {},
    "source": [
     "Evidently, the posteriors aren’t centered on the true values of $ .5, 1 $ that we used to generate the data.\n",
     "\n",
-    "This is a symptom of the classic **Hurwicz bias** for first order autoregressive processes (see Leonid Hurwicz [[Hur50](https://python.quantecon.org/zreferences.html#id246)].)\n",
+    "This is a symptom of the classic **Hurwicz bias** for first order autoregressive processes (see Leonid Hurwicz [[Hur50](https://stats.quantecon.org/zreferences.html#id246)].)\n",
     "\n",
-    "The Hurwicz bias is worse the smaller is the sample (see [[OW69](https://python.quantecon.org/zreferences.html#id245)]).\n",
+    "The Hurwicz bias is worse the smaller is the sample (see [[OW69](https://stats.quantecon.org/zreferences.html#id245)]).\n",
     "\n",
     "Be that as it may, here is more information about the posterior."
    ]
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f4febf",
+   "id": "26d33b69",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7465ac3",
+   "id": "a7ce9f80",
    "metadata": {},
    "source": [
     "Now we shall compute a posterior distribution after seeing the same data but instead assuming that $ y_0 $ is drawn from the stationary distribution.\n",
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b629c3d3",
+   "id": "710865d8",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be43f79",
+   "id": "8088ee58",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1139dd10",
+   "id": "934cd8e9",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b696cc4e",
+   "id": "0f2c1168",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b2d8df",
+   "id": "3a9587cf",
    "metadata": {},
    "source": [
     "Please note how the posterior for $ \\rho $ has shifted to the right relative to when we conditioned on $ y_0 $ instead of assuming that $ y_0 $ is drawn from the stationary distribution.\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "728ea887",
+   "id": "5d96556a",
    "metadata": {},
    "source": [
     "## Numpyro Implementation"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15ad0d76",
+   "id": "63cacd53",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2dc83b",
+   "id": "40cfa703",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d04c5e88",
+   "id": "1419c360",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d6d5ac3",
+   "id": "4ed4811e",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b365d10f",
+   "id": "77aeeb71",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f29a3d6",
+   "id": "9b3f4fab",
    "metadata": {},
    "source": [
     "Next, we again compute the posterior under the assumption that $ y_0 $ is drawn from the stationary distribution, so that\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "236f75ac",
+   "id": "3b80f561",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "434a6c10",
+   "id": "b742a68f",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04f5d399",
+   "id": "3e73b71c",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b948fb9",
+   "id": "55701c6f",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "072e44cf",
+   "id": "58721193",
    "metadata": {},
    "source": [
     "Look what happened to the posterior!\n",
@@ -606,7 +606,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493928.679338,
+  "date": 1706589239.7037954,
   "filename": "ar1_bayes.md",
   "kernelspec": {
    "display_name": "Python",
