--- a/imp_sample.ipynb
+++ b/imp_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16ec93c5",
+   "id": "40b74e45",
    "metadata": {},
    "source": [
     "# Computing Mean of a Likelihood Ratio Process"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9f0f99",
+   "id": "a1521ee0",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b1197c",
+   "id": "afb6213e",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "In  [this lecture](https://python.quantecon.org/likelihood_ratio_process.html) we described a peculiar property of a likelihood ratio process, namely, that it’s mean equals one for all $ t \\geq 0 $ despite it’s converging to zero almost surely.\n",
+    "In  [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html) we described a peculiar property of a likelihood ratio process, namely, that it’s mean equals one for all $ t \\geq 0 $ despite it’s converging to zero almost surely.\n",
     "\n",
     "While it is easy to verify that peculiar properly analytically (i.e., in population), it is challenging to use a computer simulation to verify it via an application of a law of large numbers that entails studying sample averages of repeated simulations.\n",
     "\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01cbc8ca",
+   "id": "d67ab9b9",
    "metadata": {
     "hide-output": false
    },
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53203b74",
+   "id": "17b85c0e",
    "metadata": {},
    "source": [
     "## Mathematical Expectation of Likelihood Ratio\n",
     "\n",
-    "In [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), we studied a likelihood ratio $ \\ell \\left(\\omega_t\\right) $\n",
+    "In [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), we studied a likelihood ratio $ \\ell \\left(\\omega_t\\right) $\n",
     "\n",
     "$$\n",
     "\\ell \\left( \\omega_t \\right) = \\frac{f\\left(\\omega_t\\right)}{g\\left(\\omega_t\\right)}\n",
@@ -83,7 +83,7 @@
     "\n",
     "Our goal is to approximate the mathematical expectation $ E \\left[ L\\left(\\omega^t\\right) \\right] $ well.\n",
     "\n",
-    "In [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), we showed that  $ E \\left[ L\\left(\\omega^t\\right) \\right] $  equals $ 1 $ for all $ t $.\n",
+    "In [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), we showed that  $ E \\left[ L\\left(\\omega^t\\right) \\right] $  equals $ 1 $ for all $ t $.\n",
     "We want to check out how well this holds if we replace $ E $ by with  sample averages from simulations.\n",
     "\n",
     "This turns out to be easier said than done because for\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d42cab99",
+   "id": "a805d0d2",
    "metadata": {
     "hide-output": false
    },
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1fc0fb6",
+   "id": "71ce24ae",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d47aca1",
+   "id": "7142d972",
    "metadata": {},
    "source": [
     "The likelihood ratio is `l(w)=f(w)/g(w)`."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b037e565",
+   "id": "2b08855e",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa26faa",
+   "id": "dee7e97f",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df71eda",
+   "id": "4db86fc6",
    "metadata": {},
    "source": [
     "The above plots shows that as $ \\omega \\rightarrow 0 $, $ f \\left(\\omega\\right) $ is unchanged and $ g \\left(\\omega\\right) \\rightarrow 0 $, so  the likelihood ratio approaches infinity.\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a37d51",
+   "id": "1482f6f6",
    "metadata": {},
    "source": [
     "## Importance sampling\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f9fd387",
+   "id": "f8b51a0c",
    "metadata": {},
    "source": [
     "## Selecting a Sampling Distribution\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65d46900",
+   "id": "ff2f8b5b",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ac96dc",
+   "id": "b68b8958",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5435215d",
+   "id": "e8ed6914",
    "metadata": {},
    "source": [
     "## Approximating a cumulative likelihood ratio\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13175a75",
+   "id": "573366f1",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "279bdee8",
+   "id": "44ea2ff1",
    "metadata": {},
    "source": [
     "Consider the case when $ T=1 $, which amounts  to approximating $ E_0\\left[\\ell\\left(\\omega\\right)\\right] $\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a847707",
+   "id": "1d563bab",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e7c1d4",
+   "id": "254751d2",
    "metadata": {},
    "source": [
     "For our importance sampling estimate, we set $ q = h $."
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f29f742",
+   "id": "1edb1a37",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6475c977",
+   "id": "eb8ef004",
    "metadata": {},
    "source": [
     "Evidently, even at T=1, our importance sampling  estimate is closer to $ 1 $ than is the Monte Carlo estimate.\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98b756b4",
+   "id": "c5cff3b4",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8f4128",
+   "id": "a5b21243",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94172979",
+   "id": "737ffca0",
    "metadata": {},
    "source": [
     "## Distribution of  Sample Mean\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a089fb9f",
+   "id": "f6253b35",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ade12ee",
+   "id": "90bbdf64",
    "metadata": {},
    "source": [
     "Again, we first consider estimating $ {E} \\left[\\ell\\left(\\omega\\right)\\right] $ by setting T=1.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6941e666",
+   "id": "7f5157f4",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e57b4cf",
+   "id": "282ff908",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3e5c005",
+   "id": "960bd3c9",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c0a315",
+   "id": "6bfb835e",
    "metadata": {},
    "source": [
     "Although both methods tend to provide a mean estimate of $ {E} \\left[\\ell\\left(\\omega\\right)\\right] $ close to $ 1 $, the importance sampling estimates have  smaller variance.\n",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb7055d",
+   "id": "3eaaa1ad",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582bc95e",
+   "id": "5219c5a3",
    "metadata": {},
    "source": [
     "The simulation exercises above show that the importance sampling estimates are unbiased under all $ T $\n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fb4540",
+   "id": "b2b77fa5",
    "metadata": {},
    "source": [
     "## More Thoughts about Choice of Sampling Distribution\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c561fe63",
+   "id": "43f00adf",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75185a78",
+   "id": "0dc68e6f",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0368fd8c",
+   "id": "f4309a17",
    "metadata": {},
    "source": [
     "We could also use other distributions as our importance distribution.\n",
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7494132c",
+   "id": "8cd87c18",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc78b05e",
+   "id": "c042dc4a",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec21a26f",
+   "id": "753bbc7e",
    "metadata": {},
    "source": [
     "We consider two additonal distributions.\n",
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e2eee0",
+   "id": "98bbda8d",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5217ac59",
+   "id": "45a92c40",
    "metadata": {},
    "source": [
     "Our simulations suggest that indeed $ h_2 $ is a quite  good importance sampling distribution for our problem.\n",
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa132e38",
+   "id": "98e6589e",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a281d16e",
+   "id": "8c33c6ef",
    "metadata": {},
    "source": [
     "However, $ h_3 $ is evidently a poor importance sampling distribution forpir problem,\n",
@@ -771,7 +771,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.1163507,
+  "date": 1706589240.1350102,
   "filename": "imp_sample.md",
   "kernelspec": {
    "display_name": "Python",
