--- a/likelihood_bayes.ipynb
+++ b/likelihood_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "799b3ba6",
+   "id": "85d1c4d3",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6800193a",
+   "id": "b7d166fd",
    "metadata": {},
    "source": [
     "# Likelihood Ratio Processes and Bayesian Learning"
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a4a3e04",
+   "id": "d28cb09d",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
     "This lecture describes the role that **likelihood ratio processes** play in  **Bayesian learning**.\n",
     "\n",
-    "As in [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), we’ll use a simple statistical setting from [this lecture](https://python.quantecon.org/exchangeable.html).\n",
+    "As in [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), we’ll use a simple statistical setting from [this lecture](https://stats.quantecon.org/exchangeable.html).\n",
     "\n",
     "We’ll focus on how a likelihood ratio process and a **prior** probability determine a **posterior** probability.\n",
     "\n",
@@ -37,12 +37,12 @@
     "today’s realization of the likelihood ratio process.\n",
     "\n",
     "We’ll study how, at least  in our setting, a Bayesian eventually learns the probability distribution that generates the data, an outcome that\n",
-    "rests on the asymptotic behavior of likelihood ratio processes studied in [this lecture](https://python.quantecon.org/likelihood_ratio_process.html).\n",
+    "rests on the asymptotic behavior of likelihood ratio processes studied in [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html).\n",
     "\n",
     "We’ll also drill down into the psychology of our Bayesian learner and study dynamics  under his subjective beliefs.\n",
     "\n",
     "This lecture provides technical results that underly outcomes to be studied in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html)\n",
-    "and [this lecture](https://python.quantecon.org/wald_friedman.html) and [this lecture](https://python.quantecon.org/navy_captain.html).\n",
+    "and [this lecture](https://stats.quantecon.org/wald_friedman.html) and [this lecture](https://stats.quantecon.org/navy_captain.html).\n",
     "\n",
     "We’ll begin by loading some Python modules."
    ]
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4afd376",
+   "id": "5ef2f839",
    "metadata": {
     "hide-output": false
    },
@@ -74,12 +74,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32ad790",
+   "id": "9e9e4b98",
    "metadata": {},
    "source": [
     "## The Setting\n",
     "\n",
-    "We begin by reviewing the setting in [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), which we adopt here too.\n",
+    "We begin by reviewing the setting in [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), which we adopt here too.\n",
     "\n",
     "A nonnegative random variable $ W $ has one of two probability density functions, either\n",
     "$ f $ or $ g $.\n",
@@ -140,9 +140,9 @@
     "\n",
     "The likelihood ratio and its logarithm are key tools for making\n",
     "inferences using a classic frequentist approach due to Neyman and\n",
-    "Pearson [[NP33](https://python.quantecon.org/zreferences.html#id278)].\n",
+    "Pearson [[NP33](https://stats.quantecon.org/zreferences.html#id278)].\n",
     "\n",
-    "We’ll again deploy the following Python code from [this lecture](https://python.quantecon.org/likelihood_ratio_process.html) that\n",
+    "We’ll again deploy the following Python code from [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html) that\n",
     "evaluates $ f $ and $ g $ as two different\n",
     "beta distributions, then computes and simulates an associated likelihood\n",
     "ratio process by generating a sequence $ w^t $ from *some*\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0915c84",
+   "id": "3f37b330",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d03431",
+   "id": "74593b7c",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f02a6f",
+   "id": "bdf9a609",
    "metadata": {},
    "source": [
     "We’ll also use the following Python code to prepare some informative simulations"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307fb96c",
+   "id": "4121bafb",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043fa007",
+   "id": "685ace59",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c2fc42",
+   "id": "d9b50b82",
    "metadata": {},
    "source": [
     "## Likelihood Ratio Process and Bayes’ Law\n",
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f8c2fe",
+   "id": "dbd4f023",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "484f0378",
+   "id": "a5d88bf0",
    "metadata": {},
    "source": [
     "Formula [(15.1)](#equation-eq-recur1) can be generalized  by iterating on it and thereby deriving an\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955e7f23",
+   "id": "a3a214b5",
    "metadata": {
     "hide-output": false
    },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26753641",
+   "id": "523c45bc",
    "metadata": {},
    "source": [
     "Next we generate paths of the likelihood ratio process $ L_t $ and the posterior $ \\pi_t $ for a\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec40bec8",
+   "id": "d15a3401",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d238713c",
+   "id": "159c75dd",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6108d0da",
+   "id": "2fb9cda5",
    "metadata": {},
    "source": [
     "The dotted line in the graph above records the logarithm of the  likelihood ratio process $ \\log L(w^t) $.\n",
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7664fea4",
+   "id": "376a7833",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41e77034",
+   "id": "a03a32d7",
    "metadata": {
     "hide-output": false
    },
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e7cb6b",
+   "id": "5fb9f6de",
    "metadata": {},
    "source": [
     "Below we offer Python code that verifies that nature chose permanently to draw from density $ f $."
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9639bffb",
+   "id": "8ca30116",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a7bbdfa",
+   "id": "f638b72d",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ccbc00",
+   "id": "169e810f",
    "metadata": {},
    "source": [
     "We thus conclude that  the likelihood ratio process is a key ingredient of the formula [(15.2)](#equation-eq-bayeslaw103) for\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3cc109c",
+   "id": "a8a1593b",
    "metadata": {},
    "source": [
     "## Behavior of  posterior probability $ \\{\\pi_t\\} $  under the subjective probability distribution\n",
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45832b2a",
+   "id": "8dc37a93",
    "metadata": {},
    "source": [
     "### Mechanical details again\n",
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc378185",
+   "id": "69160106",
    "metadata": {},
    "source": [
     "### Some simulations\n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f228139b",
+   "id": "bb67e738",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5e7c1b",
+   "id": "aed567ad",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e55d300",
+   "id": "fe42ea00",
    "metadata": {},
    "source": [
     "The above graph indicates that\n",
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d92a188",
+   "id": "868b492c",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29010bb2",
+   "id": "4429da70",
    "metadata": {},
    "source": [
     "Evidently, by $ t = 199 $, $ \\pi_t $ has converged to either $ 0 $ or $ 1 $.\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b86dcb",
+   "id": "34f67fd0",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e9a52b",
+   "id": "75bbb143",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f073a6",
+   "id": "28551dea",
    "metadata": {},
    "source": [
     "For the preceding ensemble that assumed $ \\pi_0 = .5 $, the following graph shows two  paths of\n",
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "545a7526",
+   "id": "bfaa806b",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f3fa07",
+   "id": "349c17cf",
    "metadata": {},
    "source": [
     "## Initial Prior is Verified by Paths Drawn from Subjective Conditional Densities\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52804ee8",
+   "id": "a25388af",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bf9bdba",
+   "id": "e5271843",
    "metadata": {},
    "source": [
     "The fraction of simulations for which $ \\pi_{t} $  had converged to $ 1 $ is indeed always  close  to $ \\pi_{-1} $, as anticipated."
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0658235e",
+   "id": "d48b1f66",
    "metadata": {},
    "source": [
     "## Drilling Down a Little Bit\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5774a08c",
+   "id": "1aa6d8e7",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f81df9e",
+   "id": "0a6552bf",
    "metadata": {},
    "source": [
     "The shape of the the conditional variance as a function of $ \\pi_{t-1} $ is informative about the behavior of sample paths of $ \\{\\pi_t\\} $.\n",
@@ -1052,18 +1052,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2072f2d8",
+   "id": "faab12bf",
    "metadata": {},
    "source": [
     "## Sequels\n",
     "\n",
     "This lecture has been devoted to building some useful infrastructure that will help us understand inferences that are the foundations of\n",
-    "results described  in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html) and [this lecture](https://python.quantecon.org/wald_friedman.html) and [this lecture](https://python.quantecon.org/navy_captain.html)."
+    "results described  in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html) and [this lecture](https://stats.quantecon.org/wald_friedman.html) and [this lecture](https://stats.quantecon.org/navy_captain.html)."
    ]
   }
  ],
  "metadata": {
-  "date": 1706493929.1878185,
+  "date": 1706589240.2077951,
   "filename": "likelihood_bayes.md",
   "kernelspec": {
    "display_name": "Python",
