--- a/likelihood_ratio_process.ipynb
+++ b/likelihood_ratio_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16d56880",
+   "id": "91015ef1",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60164b35",
+   "id": "ed70ece6",
    "metadata": {},
    "source": [
     "# Likelihood Ratio Processes"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75536b7",
+   "id": "c2f445f8",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,21 +37,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447ada06",
+   "id": "04a4ab2e",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
     "This lecture describes likelihood ratio processes and some of their uses.\n",
     "\n",
-    "We’ll use a setting described in [this lecture](https://python.quantecon.org/exchangeable.html).\n",
+    "We’ll use a setting described in [this lecture](https://stats.quantecon.org/exchangeable.html).\n",
     "\n",
     "Among  things that we’ll learn  are\n",
     "\n",
     "- A peculiar property of likelihood ratio processes  \n",
     "- How a likelihood ratio process is a key ingredient in frequentist hypothesis testing  \n",
     "- How a **receiver operator characteristic curve** summarizes information about a false alarm probability and power in frequentist hypothesis testing  \n",
-    "- How during World War II the United States Navy devised a decision rule that Captain Garret L. Schyler challenged and asked Milton Friedman to justify to him, a topic to be studied in  [this lecture](https://python.quantecon.org/wald_friedman.html)  \n",
+    "- How during World War II the United States Navy devised a decision rule that Captain Garret L. Schyler challenged and asked Milton Friedman to justify to him, a topic to be studied in  [this lecture](https://stats.quantecon.org/wald_friedman.html)  \n",
     "\n",
     "\n",
     "Let’s start  by importing some Python tools."
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb95eb69",
+   "id": "260fb7e5",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e8bf91",
+   "id": "4df69748",
    "metadata": {},
    "source": [
     "## Likelihood Ratio Process\n",
@@ -141,7 +141,7 @@
     "\n",
     "The likelihood ratio and its logarithm are key tools for making\n",
     "inferences using a classic frequentist approach due to Neyman and\n",
-    "Pearson [[NP33](https://python.quantecon.org/zreferences.html#id278)].\n",
+    "Pearson [[NP33](https://stats.quantecon.org/zreferences.html#id278)].\n",
     "\n",
     "To help us appreciate how things work, the following Python code evaluates $ f $ and $ g $ as two different\n",
     "beta distributions, then computes and simulates an associated likelihood\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c6c858",
+   "id": "9b272a2a",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1b38f13",
+   "id": "f043d145",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b4c8b5",
+   "id": "e546832d",
    "metadata": {},
    "source": [
     "## Nature Permanently Draws from Density g\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52482a44",
+   "id": "89655e0f",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abcd56d6",
+   "id": "0b40eada",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22fdeb1e",
+   "id": "699a353c",
    "metadata": {},
    "source": [
     "Evidently, as sample length $ T $ grows, most probability mass\n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2043094",
+   "id": "592d5e71",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15a9104",
+   "id": "50777263",
    "metadata": {},
    "source": [
     "Despite the evident convergence of most probability mass to a\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c462977d",
+   "id": "c17e16b5",
    "metadata": {},
    "source": [
     "## Peculiar Property\n",
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039b8420",
+   "id": "7fd49288",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440eaafc",
+   "id": "08d1332d",
    "metadata": {},
    "source": [
     "It would be useful to use simulations to verify that  unconditional means\n",
@@ -368,14 +368,14 @@
     "\n",
     "Because the probability density in the right tail is close to $ 0 $,  it just takes too much computer time to sample enough points from the right tail.\n",
     "\n",
-    "We explain the problem in more detail  in [this lecture](https://python.quantecon.org/imp_sample.html).\n",
+    "We explain the problem in more detail  in [this lecture](https://stats.quantecon.org/imp_sample.html).\n",
     "\n",
     "There we describe a way to an alternative way to compute the mean of a likelihood ratio by computing the mean of a *different* random variable by sampling from  a *different* probability distribution."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0ce6ea5",
+   "id": "bcbe9032",
    "metadata": {},
    "source": [
     "## Nature Permanently Draws from Density f\n",
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af3bfe8",
+   "id": "6fdf7feb",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b12a1c",
+   "id": "bf55cf27",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6238db0c",
+   "id": "152fb825",
    "metadata": {},
    "source": [
     "We also plot the probability that $ L\\left(w^t\\right) $ falls into\n",
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "279e8ad8",
+   "id": "5da58a8b",
    "metadata": {
     "hide-output": false
    },
@@ -456,13 +456,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7fe3c18",
+   "id": "9695fbb5",
    "metadata": {},
    "source": [
     "## Likelihood Ratio Test\n",
     "\n",
     "We now describe how to employ the machinery\n",
-    "of Neyman and Pearson [[NP33](https://python.quantecon.org/zreferences.html#id278)] to test the hypothesis that  history $ w^t $ is generated by repeated\n",
+    "of Neyman and Pearson [[NP33](https://stats.quantecon.org/zreferences.html#id278)] to test the hypothesis that  history $ w^t $ is generated by repeated\n",
     "IID draws from density $ g $.\n",
     "\n",
     "Denote $ q $ as the data generating process, so that\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3bb94b3",
+   "id": "e56dea7c",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d98d91",
+   "id": "507fcc54",
    "metadata": {},
    "source": [
     "Below we plot empirical distributions of logarithms of the cumulative\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9305fa34",
+   "id": "48804eef",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e24320a",
+   "id": "d81e2739",
    "metadata": {},
    "source": [
     "The graph below shows more clearly that, when we hold the threshold\n",
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14afb885",
+   "id": "37c06856",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "056c1c01",
+   "id": "a3658c47",
    "metadata": {},
    "source": [
     "For a given sample size $ t $,  the threshold $ c $ uniquely pins down  probabilities\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57556277",
+   "id": "863dc549",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ead88974",
+   "id": "4d6e21be",
    "metadata": {},
    "source": [
     "Notice that as $ t $ increases, we are assured a larger probability\n",
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6eda06c",
+   "id": "70f46f45",
    "metadata": {
     "hide-output": false
    },
@@ -751,19 +751,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1cd5774",
+   "id": "d4002675",
    "metadata": {},
    "source": [
     "The United States Navy evidently used a procedure like this to select a sample size $ t $ for doing quality\n",
     "control tests during World War II.\n",
     "\n",
     "A Navy Captain who had been ordered to perform tests of this kind had doubts about it that he\n",
-    "presented to Milton Friedman, as we describe in  [this lecture](https://python.quantecon.org/wald_friedman.html)."
+    "presented to Milton Friedman, as we describe in  [this lecture](https://stats.quantecon.org/wald_friedman.html)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "073fc9c6",
+   "id": "ad11d1c7",
    "metadata": {},
    "source": [
     "## Kullback–Leibler Divergence\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106a0281",
+   "id": "b1460a60",
    "metadata": {
     "hide-output": false
    },
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7921ae62",
+   "id": "599a31d4",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe98cb79",
+   "id": "6f4841b0",
    "metadata": {},
    "source": [
     "Let’s compute the Kullback–Leibler discrepancies by quadrature\n",
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e949d716",
+   "id": "1d1b2af4",
    "metadata": {
     "hide-output": false
    },
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aff2a76",
+   "id": "69760077",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6ab0e37",
+   "id": "83eab70d",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fdeb322",
+   "id": "310fb2bb",
    "metadata": {},
    "source": [
     "We have $ K_g < K_f $.\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d65bd10",
+   "id": "b3ff2c75",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "044dea18",
+   "id": "48ef1e0a",
    "metadata": {},
    "source": [
     "The figure below plots over time the fraction of paths\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e0a70a8",
+   "id": "ac64bf8a",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfaa566a",
+   "id": "76eb3b1b",
    "metadata": {},
    "source": [
     "We can also try an $ h $ that is closer to $ f $ than is\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0aa047b",
+   "id": "78193444",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99f73687",
+   "id": "e0cf8bef",
    "metadata": {
     "hide-output": false
    },
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a5d6a7",
+   "id": "6944ca16",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f401a09e",
+   "id": "16ab98bc",
    "metadata": {},
    "source": [
     "Now probability mass of $ L\\left(w^t\\right) $ falling above\n",
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d42931e",
+   "id": "c5f096ce",
    "metadata": {
     "hide-output": false
    },
@@ -1031,12 +1031,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d305c9",
+   "id": "84a523fd",
    "metadata": {},
    "source": [
     "## Sequels\n",
     "\n",
-    "Likelihood processes play an important role in Bayesian learning, as described in [this lecture](https://python.quantecon.org/likelihood_bayes.html)\n",
+    "Likelihood processes play an important role in Bayesian learning, as described in [this lecture](https://stats.quantecon.org/likelihood_bayes.html)\n",
     "and as applied in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html).\n",
     "\n",
     "Likelihood ratio processes appear again in [this lecture](https://python-advanced.quantecon.org/additive_functionals.html), which contains another illustration\n",
@@ -1045,7 +1045,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.2431805,
+  "date": 1706589240.2623506,
   "filename": "likelihood_ratio_process.md",
   "kernelspec": {
    "display_name": "Python",
