--- a/mix_model.ipynb
+++ b/mix_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40361045",
+   "id": "ed07b2f5",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e17b9e81",
+   "id": "83bdccdf",
    "metadata": {},
    "source": [
     "# Incorrect Models\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4a2b7c",
+   "id": "f21d3757",
    "metadata": {
     "hide-output": false
    },
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611c9bc1",
+   "id": "d8b93b2a",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "This  is a sequel to [this  quantecon lecture](https://python.quantecon.org/likelihood_bayes.html).\n",
+    "This  is a sequel to [this  quantecon lecture](https://stats.quantecon.org/likelihood_bayes.html).\n",
     "\n",
     "We discuss  two ways to create compound lottery and their consequences.\n",
     "\n",
@@ -73,7 +73,7 @@
     "\n",
     "The reason is that  now the wage sequence is actually described by a different statistical model.\n",
     "\n",
-    "Thus, we change the [quantecon lecture](https://python.quantecon.org/likelihood_bayes.html) specification in the following way.\n",
+    "Thus, we change the [quantecon lecture](https://stats.quantecon.org/likelihood_bayes.html) specification in the following way.\n",
     "\n",
     "Now, **each period** $ t \\geq 0 $, nature flips a possibly unfair coin that comes up $ f $ with probability $ \\alpha $\n",
     "and $ g $ with probability $ 1 -\\alpha $.\n",
@@ -94,7 +94,7 @@
     "Our second type of agent knows, correctly, that nature mixes $ f $ and $ g $ with mixing probability $ \\alpha \\in (0,1) $\n",
     "each period, though the agent doesn’t know the mixing parameter.\n",
     "\n",
-    "Our first type of agent applies the learning algorithm described in [this  quantecon lecture](https://python.quantecon.org/likelihood_bayes.html).\n",
+    "Our first type of agent applies the learning algorithm described in [this  quantecon lecture](https://stats.quantecon.org/likelihood_bayes.html).\n",
     "\n",
     "In the context of the statistical model that prevailed in that lecture, that was a good learning algorithm and it enabled the Bayesian learner\n",
     "eventually to learn the distribution that nature had drawn at time $ -1 $.\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de30ed8a",
+   "id": "410ee1cd",
    "metadata": {
     "hide-output": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "493a26f6",
+   "id": "203696e8",
    "metadata": {},
    "source": [
     "Let’s use Python to generate two beta distributions"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59c0bb3f",
+   "id": "aafa87cd",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a9b420",
+   "id": "ac4ab199",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43475f18",
+   "id": "98a5a6c0",
    "metadata": {},
    "source": [
     "We’ll also use the following Python code to prepare some informative simulations"
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6a2d7e",
+   "id": "c2437fe3",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e622dcb1",
+   "id": "f908e582",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "549602d2",
+   "id": "7bd1b6c6",
    "metadata": {},
    "source": [
     "## Sampling from  Compound Lottery $ H $\n",
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f412b2bf",
+   "id": "f7ab14f8",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ea65f4e",
+   "id": "9ea65faa",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676ec116",
+   "id": "bb20b2c9",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ab4c0a",
+   "id": "880f392d",
    "metadata": {
     "hide-output": false
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d443753",
+   "id": "86c921f1",
    "metadata": {},
    "source": [
     "**Note:** With numba acceleration the first method is actually only slightly slower than the second when we generated 1,000,000 samples."
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4762eff",
+   "id": "a80a3bce",
    "metadata": {},
    "source": [
     "## Type 1 Agent\n",
@@ -410,7 +410,7 @@
     "\n",
     "Remember that our type 1 agent uses the wrong statistical model, thinking that nature mixed between $ f $ and $ g $ once and for all at time $ -1 $.\n",
     "\n",
-    "The type 1 agent thus uses the learning algorithm studied in [this  quantecon lecture](https://python.quantecon.org/likelihood_bayes.html).\n",
+    "The type 1 agent thus uses the learning algorithm studied in [this  quantecon lecture](https://stats.quantecon.org/likelihood_bayes.html).\n",
     "\n",
     "We’ll briefly review that learning algorithm now.\n",
     "\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f71808c",
+   "id": "8da20936",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026cb72f",
+   "id": "2222b445",
    "metadata": {},
    "source": [
     "Formula [(16.1)](#equation-equation-eq-recur1) can be generalized  by iterating on it and thereby deriving an\n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ff1de7",
+   "id": "8461e920",
    "metadata": {},
    "source": [
     "## What a type 1 Agent Learns when Mixture $ H $ Generates Data\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77badcf9",
+   "id": "1a05042a",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80bd7d1a",
+   "id": "325844e8",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611fb249",
+   "id": "01034b74",
    "metadata": {},
    "source": [
     "The above graph shows a sample path of the log likelihood ratio process as the blue dotted line, together with\n",
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "453ad2e6",
+   "id": "9d094ba0",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b2938d",
+   "id": "f29f78da",
    "metadata": {},
    "source": [
     "Evidently, $ \\alpha $ is having a big effect on the destination of $ \\pi_t $ as $ t \\rightarrow + \\infty $"
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea832ec",
+   "id": "b9591887",
    "metadata": {},
    "source": [
     "## Kullback-Leibler Divergence Governs Limit of $ \\pi_t $\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4414544",
+   "id": "c90d6c4c",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec7594bb",
+   "id": "e8e75350",
    "metadata": {},
    "source": [
     "Let us first plot the KL divergences $ KL_g\\left(\\alpha\\right), KL_f\\left(\\alpha\\right) $ for each $ \\alpha $."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96bc3c70",
+   "id": "8679629f",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8857b0d8",
+   "id": "b19a8d23",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c0836d",
+   "id": "fb575284",
    "metadata": {},
    "source": [
     "Let’s compute an $ \\alpha $ for which  the KL divergence  between $ h $ and $ g $ is the same as that between $ h $ and $ f $."
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2445df82",
+   "id": "ea37c427",
    "metadata": {
     "hide-output": false
    },
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e112dec",
+   "id": "a43785fd",
    "metadata": {},
    "source": [
     "We can compute and plot the convergence point $ \\pi_{\\infty} $ for each $ \\alpha $ to verify that the convergence is indeed governed by the KL divergence.\n",
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad3a4d7",
+   "id": "c10b4061",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f31c250",
+   "id": "adde7429",
    "metadata": {},
    "source": [
     "Evidently, our type 1 learner who applies Bayes’ law to his misspecified set of statistical models eventually learns an approximating model that is as close as possible to the true model, as measured by its\n",
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831b1e03",
+   "id": "682d22ed",
    "metadata": {},
    "source": [
     "## Type 2 Agent\n",
@@ -892,7 +892,7 @@
     "but does not know $ \\alpha $.\n",
     "\n",
     "We’ll assume that the person starts out with a prior probabilty $ \\pi_0(\\alpha) $ on\n",
-    "$ \\alpha \\in (0,1) $ where the prior has one of the forms that we deployed in [this quantecon lecture](https://python.quantecon.org/bayes_nonconj.html).\n",
+    "$ \\alpha \\in (0,1) $ where the prior has one of the forms that we deployed in [this quantecon lecture](https://stats.quantecon.org/bayes_nonconj.html).\n",
     "\n",
     "We’ll fire up `numpyro` and  apply it  to the present situation.\n",
     "\n",
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a9e148d",
+   "id": "5a6e169b",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76368ed9",
+   "id": "ed014e8e",
    "metadata": {},
    "source": [
     "The following code generates the graph below that displays Bayesian posteriors for $ \\alpha $ at various history lengths."
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a593a43f",
+   "id": "22737af7",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "791e577a",
+   "id": "6fa25402",
    "metadata": {},
    "source": [
     "Evidently,  the Bayesian posterior  narrows in on the true value  $ \\alpha = .8 $ of the mixing parameter as the length of a history of observations grows."
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098cf577",
+   "id": "e3e8253c",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -1028,7 +1028,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.3413239,
+  "date": 1706589240.4917257,
   "filename": "mix_model.md",
   "kernelspec": {
    "display_name": "Python",
