--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83f6f5da",
+   "id": "c210d235",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75ce149",
+   "id": "454d5655",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e286bc11",
+   "id": "a7868826",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "In a [previous lecture](https://python.quantecon.org/ols.html), we estimated the relationship between\n",
+    "In a [previous lecture](https://stats.quantecon.org/ols.html), we estimated the relationship between\n",
     "dependent and explanatory variables using linear regression.\n",
     "\n",
     "But what if a linear relationship is not an appropriate assumption for our model?\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ef30c6",
+   "id": "5b449959",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf88feb",
+   "id": "4e2467ff",
    "metadata": {},
    "source": [
     "### Prerequisites\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "889343e2",
+   "id": "671fdd4a",
    "metadata": {},
    "source": [
     "## Set Up and Assumptions\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe13505d",
+   "id": "a6af1966",
    "metadata": {},
    "source": [
     "### Flow of Ideas\n",
@@ -120,12 +120,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c17303b",
+   "id": "ea081abc",
    "metadata": {},
    "source": [
     "### Counting Billionaires\n",
     "\n",
-    "Treisman [[Tre16](https://python.quantecon.org/zreferences.html#id80)] is interested in estimating the number of billionaires in different countries.\n",
+    "Treisman [[Tre16](https://stats.quantecon.org/zreferences.html#id80)] is interested in estimating the number of billionaires in different countries.\n",
     "\n",
     "The number of billionaires is integer-valued.\n",
     "\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46e51627",
+   "id": "9be6a13d",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220d7d54",
+   "id": "075bccf9",
    "metadata": {},
    "source": [
     "Notice that the Poisson distribution begins to resemble a normal distribution as the mean of $ y $ increases.\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e0bf9d",
+   "id": "915a40d9",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da225f2a",
+   "id": "c043be26",
    "metadata": {},
    "source": [
     "Using a histogram, we can view the distribution of the number of\n",
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6dcb593",
+   "id": "2a05434f",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bf78ee",
+   "id": "2d27542a",
    "metadata": {},
    "source": [
     "From the histogram, it appears that the Poisson assumption is not unreasonable (albeit with a very low $ \\mu $ and some outliers)."
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "030c8a98",
+   "id": "a84f49cc",
    "metadata": {},
    "source": [
     "## Conditional Distributions\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477c5a39",
+   "id": "d6ad889f",
    "metadata": {
     "hide-output": false
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efeebf22",
+   "id": "125d36b9",
    "metadata": {},
    "source": [
     "We can see that the distribution of $ y_i $ is conditional on\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b7aa58",
+   "id": "83e2e497",
    "metadata": {},
    "source": [
     "## Maximum Likelihood Estimation\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad3391c7",
+   "id": "8318fa31",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efccc75",
+   "id": "b38c7e58",
    "metadata": {},
    "source": [
     "Similarly, the joint pmf of our data (which is distributed as a\n",
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82bda339",
+   "id": "a7f86896",
    "metadata": {},
    "source": [
     "## MLE with Numerical Methods\n",
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74db12af",
+   "id": "b98628cd",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe9d1cc",
+   "id": "a5ce4608",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d23e31",
+   "id": "8af02cb7",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "768bc245",
+   "id": "b742f5c7",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `PoissonRegression` object\n",
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ca19bf",
+   "id": "463360ac",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54bd27df",
+   "id": "428f58b5",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5373702c",
+   "id": "0976e4eb",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba61c081",
+   "id": "1054163d",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7601e8",
+   "id": "f3685c83",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd00744b",
+   "id": "e3fa1a7a",
    "metadata": {},
    "source": [
     "The iterative process can be visualized in the following diagram, where\n",
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb18ecd",
+   "id": "d9d1f468",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc202373",
+   "id": "25495cf9",
    "metadata": {},
    "source": [
     "Note that our implementation of the Newton-Raphson algorithm is rather\n",
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff8f2379",
+   "id": "4c7158d1",
    "metadata": {},
    "source": [
     "## Maximum Likelihood Estimation with `statsmodels`\n",
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b0ac41",
+   "id": "2f4989b4",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a338e2",
+   "id": "9538c2cd",
    "metadata": {},
    "source": [
     "Now let’s replicate results from Daniel Treisman’s paper, [Russia’s\n",
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3550d8",
+   "id": "9e72826f",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b305c9b2",
+   "id": "336aefe7",
    "metadata": {},
    "source": [
     "Then we can use the `Poisson` function from `statsmodels` to fit the\n",
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22bb5c5c",
+   "id": "f6e77d72",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c3df58f",
+   "id": "f05c5a03",
    "metadata": {},
    "source": [
     "Success! The algorithm was able to achieve convergence in 9 iterations.\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e52992a",
+   "id": "9cbfab00",
    "metadata": {
     "hide-output": false
    },
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418acccd",
+   "id": "df4fa5d0",
    "metadata": {},
    "source": [
     "The output suggests that the frequency of billionaires is positively\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e50e17",
+   "id": "e4ea517d",
    "metadata": {
     "hide-output": false
    },
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5228e66e",
+   "id": "b040b0b8",
    "metadata": {},
    "source": [
     "As we can see, Russia has by far the highest number of billionaires in\n",
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8231ad9",
+   "id": "eb83de99",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a6e932a",
+   "id": "56ec3437",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988bf3a2",
+   "id": "be930f57",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -1112,10 +1112,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4483be28",
+   "id": "a5593c67",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 3.1](https://python.quantecon.org/#mle_ex1)\n",
+    "## Solution to[ Exercise 3.1](https://stats.quantecon.org/#mle_ex1)\n",
     "\n",
     "The log-likelihood can be written as\n",
     "\n",
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48df6adc",
+   "id": "5652068b",
    "metadata": {
     "hide-output": false
    },
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c26ee46",
+   "id": "1c231324",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60bf0ac6",
+   "id": "e9cc807d",
    "metadata": {
     "hide-output": false
    },
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfc328f1",
+   "id": "26ec7246",
    "metadata": {},
    "source": [
     "Note that the simple Newton-Raphson algorithm developed in this lecture\n",
@@ -1268,10 +1268,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b9f667",
+   "id": "7295c753",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 3.2](https://python.quantecon.org/#mle_ex2)\n",
+    "## Solution to[ Exercise 3.2](https://stats.quantecon.org/#mle_ex2)\n",
     "\n",
     "Here is one solution"
    ]
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "749a2eab",
+   "id": "94cccb70",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d3767d",
+   "id": "1f8af28a",
    "metadata": {
     "hide-output": false
    },
@@ -1319,7 +1319,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.3915737,
+  "date": 1706589240.54168,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
