--- a/navy_captain.ipynb
+++ b/navy_captain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "322b9444",
+   "id": "cf56b37c",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef790bf3",
+   "id": "4554636c",
    "metadata": {},
    "source": [
     "# Bayesian versus Frequentist Decision Rules"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df00d53b",
+   "id": "b0c88b49",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c2a2bf",
+   "id": "781dad83",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39a24c7",
+   "id": "80200294",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a48a26d1",
+   "id": "2642f115",
    "metadata": {
     "hide-output": false
    },
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62eafda2",
+   "id": "e9b146fc",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
     "This lecture follows up on ideas presented in the following lectures:\n",
     "\n",
-    "- [A Problem that Stumped Milton Friedman](https://python.quantecon.org/wald_friedman.html)  \n",
-    "- [Exchangeability and Bayesian Updating](https://python.quantecon.org/exchangeable.html)  \n",
-    "- [Likelihood Ratio Processes](https://python.quantecon.org/likelihood_ratio_process.html)  \n",
+    "- [A Problem that Stumped Milton Friedman](https://stats.quantecon.org/wald_friedman.html)  \n",
+    "- [Exchangeability and Bayesian Updating](https://stats.quantecon.org/exchangeable.html)  \n",
+    "- [Likelihood Ratio Processes](https://stats.quantecon.org/likelihood_ratio_process.html)  \n",
     "\n",
     "\n",
-    "In [A Problem that Stumped Milton Friedman](https://python.quantecon.org/wald_friedman.html)  we described a problem\n",
+    "In [A Problem that Stumped Milton Friedman](https://stats.quantecon.org/wald_friedman.html)  we described a problem\n",
     "that a Navy Captain presented to Milton Friedman during World War II.\n",
     "\n",
     "The Navy had instructed the Captain to use a decision rule for quality control that the Captain suspected\n",
@@ -103,8 +103,8 @@
     "One of the members of the group, the great mathematician Abraham Wald, soon solved the problem.\n",
     "\n",
     "A good way to formulate the problem is to use some ideas from Bayesian statistics that we describe in\n",
-    "this lecture [Exchangeability and Bayesian Updating](https://python.quantecon.org/exchangeable.html) and in this lecture\n",
-    "[Likelihood Ratio Processes](https://python.quantecon.org/likelihood_ratio_process.html), which describes the link between Bayesian\n",
+    "this lecture [Exchangeability and Bayesian Updating](https://stats.quantecon.org/exchangeable.html) and in this lecture\n",
+    "[Likelihood Ratio Processes](https://stats.quantecon.org/likelihood_ratio_process.html), which describes the link between Bayesian\n",
     "updating and likelihood ratio processes.\n",
     "\n",
     "The present lecture uses Python to generate simulations that evaluate expected losses under **frequentist** and **Bayesian**\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6d014b6",
+   "id": "fb51a905",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -152,7 +152,7 @@
     "another  $ z $\n",
     "\n",
     "We mainly borrow parameters from the quantecon lecture\n",
-    "[A Problem that Stumped Milton Friedman](https://python.quantecon.org/wald_friedman.html) except that we increase both $ \\bar L_{0} $\n",
+    "[A Problem that Stumped Milton Friedman](https://stats.quantecon.org/wald_friedman.html) except that we increase both $ \\bar L_{0} $\n",
     "and $ \\bar L_{1} $ from $ 25 $ to $ 100 $ to encourage the\n",
     "frequentist Navy Captain to take more draws before deciding.\n",
     "\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d733ba0f",
+   "id": "39b1e498",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90dceaf2",
+   "id": "a67425ab",
    "metadata": {},
    "source": [
     "We start with defining a `jitclass` that stores parameters and\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4975a522",
+   "id": "793caac3",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1f755e3",
+   "id": "80515380",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a74066",
+   "id": "20134776",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873be0b0",
+   "id": "1240def2",
    "metadata": {},
    "source": [
     "Above, we plot the two possible probability densities $ f_0 $ and\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd79d235",
+   "id": "95eb3db3",
    "metadata": {},
    "source": [
     "## Frequentist Decision Rule\n",
@@ -372,7 +372,7 @@
     "pinned down by choosing $ d $.\n",
     "\n",
     "To see some receiver operating characteristic curves, please see this\n",
-    "lecture [Likelihood Ratio Processes](https://python.quantecon.org/likelihood_ratio_process.html).\n",
+    "lecture [Likelihood Ratio Processes](https://stats.quantecon.org/likelihood_ratio_process.html).\n",
     "\n",
     "To solve for $ \\bar{V}_{fre}\\left(t,d\\right) $ numerically, we first\n",
     "simulate sequences of $ z $ when either $ f_0 $ or $ f_1 $\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d96be9",
+   "id": "9bd7b1d2",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaa8597b",
+   "id": "60c8b4dc",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d884dda",
+   "id": "ee42bf3f",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "997bd593",
+   "id": "242447ce",
    "metadata": {},
    "source": [
     "We can compute sequences of likelihood ratios using simulated samples."
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ba0381",
+   "id": "d273d7df",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59fbd152",
+   "id": "709e034c",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "352ae540",
+   "id": "a4d85cc3",
    "metadata": {},
    "source": [
     "With an empirical distribution of likelihood ratios in hand, we can draw\n",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d785ba58",
+   "id": "b7955aa3",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "197c1f9c",
+   "id": "5148a4e7",
    "metadata": {},
    "source": [
     "Our frequentist minimizes the expected total loss presented in equation\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1823f02",
+   "id": "ee320a6a",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7998be44",
+   "id": "8a362349",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a421054b",
+   "id": "aca62fb7",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d0f0a7",
+   "id": "0ce69686",
    "metadata": {
     "hide-output": false
    },
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1cdc6fd",
+   "id": "22c0520c",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d1c6433",
+   "id": "9a6564f4",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b7591f",
+   "id": "9cc2359e",
    "metadata": {},
    "source": [
     "Let’s now change the value of $ \\pi^{*} $ and watch how the decision\n",
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "609d9db4",
+   "id": "2eeb1945",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e7d2d4b",
+   "id": "8403f89a",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04578613",
+   "id": "82aee9af",
    "metadata": {},
    "source": [
     "The following shows how optimal sample size $ t $ and targeted\n",
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45aeb0f",
+   "id": "4cc68018",
    "metadata": {
     "hide-output": false
    },
@@ -720,12 +720,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372b1633",
+   "id": "6b024c34",
    "metadata": {},
    "source": [
     "## Bayesian Decision Rule\n",
     "\n",
-    "In  [A Problem that Stumped Milton Friedman](https://python.quantecon.org/wald_friedman.html),\n",
+    "In  [A Problem that Stumped Milton Friedman](https://stats.quantecon.org/wald_friedman.html),\n",
     "we learned how Abraham Wald confirmed the Navy\n",
     "Captain’s hunch that there is a better decision rule.\n",
     "\n",
@@ -735,14 +735,14 @@
     "$ \\beta $.\n",
     "\n",
     "To proceed, we borrow some Python code from the quantecon\n",
-    "lecture [A Problem that Stumped Milton Friedman](https://python.quantecon.org/wald_friedman.html)\n",
+    "lecture [A Problem that Stumped Milton Friedman](https://stats.quantecon.org/wald_friedman.html)\n",
     "that computes $ \\alpha $ and $ \\beta $."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5e20b0",
+   "id": "046e803f",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38866918",
+   "id": "ea63e39e",
    "metadata": {
     "hide-output": false
    },
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed8e148",
+   "id": "e4bdd861",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c39a18",
+   "id": "75379ad3",
    "metadata": {
     "hide-output": false
    },
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36cfdd3e",
+   "id": "10452555",
    "metadata": {},
    "source": [
     "The above figure portrays the value function plotted against the decision\n",
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d11f5e",
+   "id": "7d4dd40a",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2f3aa4",
+   "id": "009c7616",
    "metadata": {
     "hide-output": false
    },
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89a49ea",
+   "id": "c1baef82",
    "metadata": {},
    "source": [
     "Given an assumed value for\n",
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f538e675",
+   "id": "13a706a2",
    "metadata": {
     "hide-output": false
    },
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4674eb31",
+   "id": "d9d23d53",
    "metadata": {
     "hide-output": false
    },
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd78e5f",
+   "id": "0a40ae2a",
    "metadata": {},
    "source": [
     "This pattern of outcomes holds more generally.\n",
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06fc83c2",
+   "id": "2d617237",
    "metadata": {
     "hide-output": false
    },
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4536010",
+   "id": "795ab15b",
    "metadata": {},
    "source": [
     "## Was the Navy Captain’s Hunch Correct?\n",
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d01289d",
+   "id": "f361260e",
    "metadata": {
     "hide-output": false
    },
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07c4e1e",
+   "id": "41aa0a67",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdb35a6a",
+   "id": "720fb43a",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71b949cf",
+   "id": "597ec3ec",
    "metadata": {},
    "source": [
     "Evidently, there is no sample size $ t $ at which the frequentist\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39437e45",
+   "id": "91a8e764",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43146e4d",
+   "id": "f6f1f5be",
    "metadata": {},
    "source": [
     "The right panel of the above graph plots the difference\n",
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b228e2",
+   "id": "4cd3f6d6",
    "metadata": {},
    "source": [
     "## More Details\n",
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b007d5aa",
+   "id": "e44c200f",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f8eecc",
+   "id": "c784ec76",
    "metadata": {},
    "source": [
     "Recall that when $ \\pi^*=0.5 $, the frequentist decision rule sets a\n",
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0efd7c0b",
+   "id": "09e079f9",
    "metadata": {
     "hide-output": false
    },
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919ceb2c",
+   "id": "4e263686",
    "metadata": {},
    "source": [
     "For convenience, let’s define `t_idx` as the Python array index\n",
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8f5b6a",
+   "id": "14cfcb5d",
    "metadata": {
     "hide-output": false
    },
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70a9bc45",
+   "id": "5d6074ce",
    "metadata": {},
    "source": [
     "## Distribution of Bayesian Decision Rule’s Time to Decide\n",
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c85922",
+   "id": "00fe33d2",
    "metadata": {
     "hide-output": false
    },
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c2a5976",
+   "id": "c7ba9094",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f9bf68",
+   "id": "ea3d7bd9",
    "metadata": {
     "hide-output": false
    },
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4448f1a",
+   "id": "9c04e347",
    "metadata": {},
    "source": [
     "Later we’ll figure out how these distributions ultimately affect\n",
@@ -1410,13 +1410,13 @@
     "\n",
     "We can easily compute the updated beliefs at any time $ t $ using\n",
     "the one-to-one mapping from $ L_{t} $ to $ \\pi_{t} $ given\n",
-    "$ \\pi_0 $ described in this lecture [Likelihood Ratio Processes](https://python.quantecon.org/likelihood_ratio_process.html)."
+    "$ \\pi_0 $ described in this lecture [Likelihood Ratio Processes](https://stats.quantecon.org/likelihood_ratio_process.html)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef758a4",
+   "id": "de1e1652",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8aadc91",
+   "id": "2d483dde",
    "metadata": {
     "hide-output": false
    },
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf9cf8f",
+   "id": "48066a30",
    "metadata": {},
    "source": [
     "The above figures compare averages and variances of updated Bayesian\n",
@@ -1485,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9f1c4e",
+   "id": "d2056967",
    "metadata": {
     "hide-output": false
    },
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d940e2d6",
+   "id": "dbaf3795",
    "metadata": {},
    "source": [
     "## Probability of Making Correct Decision\n",
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f6294d8",
+   "id": "c5d8285d",
    "metadata": {
     "hide-output": false
    },
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce58f3e",
+   "id": "ee26c316",
    "metadata": {
     "hide-output": false
    },
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01429527",
+   "id": "0df3cfb4",
    "metadata": {},
    "source": [
     "By averaging using $ \\pi^{*} $, we also plot the unconditional\n",
@@ -1577,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd65ddd",
+   "id": "9a70eca5",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fecf5072",
+   "id": "704e4ead",
    "metadata": {},
    "source": [
     "## Distribution of Likelihood Ratios at Frequentist’s $ t $\n",
@@ -1623,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfda7193",
+   "id": "95a797d5",
    "metadata": {
     "hide-output": false
    },
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adaeca02",
+   "id": "558af30b",
    "metadata": {
     "hide-output": false
    },
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affd69de",
+   "id": "67bd5838",
    "metadata": {},
    "source": [
     "The next graph plots the unconditional distribution of Bayesian times to\n",
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98f243a",
+   "id": "c694f330",
    "metadata": {
     "hide-output": false
    },
@@ -1693,7 +1693,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.7554166,
+  "date": 1706589240.794153,
   "filename": "navy_captain.md",
   "kernelspec": {
    "display_name": "Python",
