--- a/pandas_panel.ipynb
+++ b/pandas_panel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9bb8240",
+   "id": "63a6097e",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64dbfa8",
+   "id": "dbeaa515",
    "metadata": {},
    "source": [
     "# Pandas for Panel Data\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69b72df",
+   "id": "b6e17d0c",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f7cfce",
+   "id": "9b8879cb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b002abf",
+   "id": "4ce1e1f4",
    "metadata": {},
    "source": [
     "## Slicing and Reshaping Data\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7dfba16",
+   "id": "2aca3a61",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1221ec5",
+   "id": "9ab315ee",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f80249",
+   "id": "c6e2970f",
    "metadata": {},
    "source": [
     "Let’s have a look at what we’ve got to work with"
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bed44559",
+   "id": "ced679b3",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "140e238a",
+   "id": "ebac09b9",
    "metadata": {},
    "source": [
     "The data is currently in long format, which is difficult to analyze when there are several dimensions to the data.\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f20f979c",
+   "id": "f877ff3d",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb020e3",
+   "id": "4cd542de",
    "metadata": {},
    "source": [
     "To more easily filter our time series data, later on, we will convert the index into a `DateTimeIndex`"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd2e995",
+   "id": "04af802f",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b0c75b",
+   "id": "1acd3fca",
    "metadata": {},
    "source": [
     "The columns contain multiple levels of indexing, known as a\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b4153f",
+   "id": "383a4b9b",
    "metadata": {
     "hide-output": false
    },
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78507dd5",
+   "id": "641f7904",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a9519a6",
+   "id": "4fc0a905",
    "metadata": {},
    "source": [
     "Like before, we can select the country (the top level of our\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc65ced3",
+   "id": "a9972d9b",
    "metadata": {
     "hide-output": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8d464e",
+   "id": "c2bc9b91",
    "metadata": {},
    "source": [
     "Stacking and unstacking levels of the `MultiIndex` will be used\n",
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed69b5b",
+   "id": "8ebcc558",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaecd97e",
+   "id": "9d952407",
    "metadata": {},
    "source": [
     "We can also pass in an argument to select the level we would like to\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a826447",
+   "id": "8fa1d928",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27d87fcd",
+   "id": "21f34c6d",
    "metadata": {},
    "source": [
     "Using a `DatetimeIndex` makes it easy to select a particular time\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36bd1dbf",
+   "id": "b92d7ca3",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf31c144",
+   "id": "af952109",
    "metadata": {},
    "source": [
     "For the rest of lecture, we will work with a dataframe of the hourly\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "498d5fa4",
+   "id": "14cec238",
    "metadata": {
     "hide-output": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1af3614",
+   "id": "09b8ded9",
    "metadata": {},
    "source": [
     "## Merging Dataframes and Filling NaNs\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6eb111a",
+   "id": "dc5d9222",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695cd8e1",
+   "id": "03a4272c",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af34f1f",
+   "id": "0bd01221",
    "metadata": {},
    "source": [
     "First, we’ll select just the country and continent variables from\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a099c8c6",
+   "id": "0e5c0789",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee633a76",
+   "id": "e2b6f1d1",
    "metadata": {},
    "source": [
     "We want to merge our new dataframe, `worlddata`, with `realwage_f`.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f177d4ce",
+   "id": "5784ee6d",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c68ede",
+   "id": "2fc90110",
    "metadata": {},
    "source": [
     "We can use either left, right, inner, or outer join to merge our\n",
@@ -458,7 +458,7 @@
     "\n",
     "This is illustrated by the red shading in the following diagram\n",
     "\n",
-    "![https://python.quantecon.org/_static/lecture_specific/pandas_panel/venn_diag.png](https://python.quantecon.org/_static/lecture_specific/pandas_panel/venn_diag.png)\n",
+    "![https://stats.quantecon.org/_static/lecture_specific/pandas_panel/venn_diag.png](https://stats.quantecon.org/_static/lecture_specific/pandas_panel/venn_diag.png)\n",
     "\n",
     "  \n",
     "We will also need to specify where the country name is located in each\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf16b86",
+   "id": "486bf7a6",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a707ab0d",
+   "id": "048b5556",
    "metadata": {},
    "source": [
     "Countries that appeared in `realwage_f` but not in `worlddata` will\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d05a4f",
+   "id": "9db106ed",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24681433",
+   "id": "212b23cf",
    "metadata": {},
    "source": [
     "We have three missing values!\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "376b0b4d",
+   "id": "3a097c68",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e58d6a9d",
+   "id": "0e2be081",
    "metadata": {},
    "source": [
     "We don’t want to overwrite the entire series with this mapping.\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3a5f32",
+   "id": "a45c901c",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e985c2",
+   "id": "302c4291",
    "metadata": {},
    "source": [
     "We will also combine the Americas into a single continent - this will make our visualization nicer later on.\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de00f84e",
+   "id": "f16e21c8",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "252ebc38",
+   "id": "56976662",
    "metadata": {},
    "source": [
     "Now that we have all the data we want in a single `DataFrame`, we will\n",
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77a3b167",
+   "id": "0a3ed72a",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b8bd00",
+   "id": "b531913b",
    "metadata": {},
    "source": [
     "While merging, we lost our `DatetimeIndex`, as we merged columns that\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cde3e25c",
+   "id": "651e209c",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ed2944",
+   "id": "037f41a7",
    "metadata": {},
    "source": [
     "Now that we have set the merged columns as the index, we can recreate a\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d1c1aa5",
+   "id": "22ef1aaf",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fa7ced",
+   "id": "d8531935",
    "metadata": {},
    "source": [
     "The `DatetimeIndex` tends to work more smoothly in the row axis, so we\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba19c4d",
+   "id": "87abfe2f",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b1feee",
+   "id": "d1b82838",
    "metadata": {},
    "source": [
     "## Grouping and Summarizing Data\n",
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c846cf8",
+   "id": "baab2770",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe79829c",
+   "id": "212b3a9d",
    "metadata": {},
    "source": [
     "Using this series, we can plot the average real minimum wage over the\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede72e2e",
+   "id": "9cdf95b0",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "809d6a3f",
+   "id": "86ace924",
    "metadata": {
     "hide-output": false
    },
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6f838e",
+   "id": "83d1a8a8",
    "metadata": {},
    "source": [
     "Passing in `axis=1` to `.mean()` will aggregate over columns (giving\n",
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72925e90",
+   "id": "55c4bd86",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6f83e8",
+   "id": "a03a9664",
    "metadata": {},
    "source": [
     "We can plot this time series as a line graph"
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c043b18",
+   "id": "a4ac1b3c",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "573b167a",
+   "id": "a02c6bac",
    "metadata": {},
    "source": [
     "We can also specify a level of the `MultiIndex` (in the column axis)\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8546a2",
+   "id": "4612f7c7",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e59816",
+   "id": "217eb0b0",
    "metadata": {},
    "source": [
     "We can plot the average minimum wages in each continent as a time series"
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d31984",
+   "id": "7721ea5e",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d279a322",
+   "id": "72e73622",
    "metadata": {},
    "source": [
     "We will drop Australia as a continent for plotting purposes"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27aa4091",
+   "id": "60347893",
    "metadata": {
     "hide-output": false
    },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24e82879",
+   "id": "94a0afb8",
    "metadata": {},
    "source": [
     "`.describe()` is useful for quickly retrieving a number of common\n",
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5121803f",
+   "id": "fa797297",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbed5084",
+   "id": "3fbfaa37",
    "metadata": {},
    "source": [
     "This is a simplified way to use `groupby`.\n",
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ebb5760",
+   "id": "c5646d6b",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7074547",
+   "id": "dc68b712",
    "metadata": {},
    "source": [
     "Calling an aggregation method on the object applies the function to each\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99eb919",
+   "id": "7a1675c7",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d43387",
+   "id": "bb058875",
    "metadata": {},
    "source": [
     "Calling `.get_group()` to return just the countries in a single group,\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5922040b",
+   "id": "7c586a54",
    "metadata": {
     "hide-output": false
    },
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e83a200",
+   "id": "71060628",
    "metadata": {},
    "source": [
     "## Final Remarks\n",
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9572d08",
+   "id": "de4e0068",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9736924",
+   "id": "28e5edcb",
    "metadata": {},
    "source": [
     "## Exercise 1.1\n",
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ee9549",
+   "id": "a51a7b89",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96cdd656",
+   "id": "8828d50c",
    "metadata": {},
    "source": [
     "Reading in the CSV file returns a panel dataset in long format. Use `.pivot_table()` to construct\n",
@@ -1056,16 +1056,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3a7625",
+   "id": "f09aae10",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 1.1](https://python.quantecon.org/#pp_ex1)"
+    "## Solution to[ Exercise 1.1](https://stats.quantecon.org/#pp_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564760d0",
+   "id": "c0844cda",
    "metadata": {
     "hide-output": false
    },
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a683dc1",
+   "id": "1de656ad",
    "metadata": {},
    "source": [
     "This is a large dataset so it is useful to explore the levels and\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1154bd2",
+   "id": "c5c7d809",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc200d5",
+   "id": "2aca9fbe",
    "metadata": {},
    "source": [
     "Variables within levels can be quickly retrieved with a loop"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9eb847f",
+   "id": "63dad75a",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34c5f0b",
+   "id": "101f3af5",
    "metadata": {},
    "source": [
     "## Exercise 1.2\n",
@@ -1139,10 +1139,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "613545c5",
+   "id": "437bedc0",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 1.2](https://python.quantecon.org/#pp_ex2)\n",
+    "## Solution to[ Exercise 1.2](https://stats.quantecon.org/#pp_ex2)\n",
     "\n",
     "To easily filter by country, swap `GEO` to the top level and sort the\n",
     "`MultiIndex`"
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1707c0d",
+   "id": "19da6080",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d65ede",
+   "id": "74c362b7",
    "metadata": {},
    "source": [
     "We need to get rid of a few items in `GEO` which are not countries.\n",
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3783972",
+   "id": "6be19ced",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2871ff21",
+   "id": "77075663",
    "metadata": {},
    "source": [
     "Select only percentage employed in the active population from the\n",
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff0742b",
+   "id": "da3b675e",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09bbb430",
+   "id": "e78eef39",
    "metadata": {},
    "source": [
     "Drop the ‘Total’ value before creating the grouped boxplot"
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1afbecf6",
+   "id": "21319633",
    "metadata": {
     "hide-output": false
    },
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a87957ad",
+   "id": "9c3c66f8",
    "metadata": {
     "hide-output": false
    },
@@ -1252,7 +1252,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.873617,
+  "date": 1706589241.0255167,
   "filename": "pandas_panel.md",
   "kernelspec": {
    "display_name": "Python",
