--- a/prob_matrix.ipynb
+++ b/prob_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6fd319c3",
+   "id": "d634f5f9",
    "metadata": {},
    "source": [
     "# Elementary Probability with Matrices\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ebaf3b0",
+   "id": "328caaba",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4856150",
+   "id": "2b8ee7c2",
    "metadata": {},
    "source": [
     "As usual, we’ll start with some imports"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d280b0",
+   "id": "a6651dd7",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7fbfdaf",
+   "id": "c0daa206",
    "metadata": {},
    "source": [
     "## Sketch of Basic Concepts\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86204cd5",
+   "id": "88847e8a",
    "metadata": {},
    "source": [
     "## What Does Probability Mean?\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db9227b8",
+   "id": "5d283ef2",
    "metadata": {},
    "source": [
     "## Representing  Probability Distributions\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501e08a5",
+   "id": "7e09235d",
    "metadata": {},
    "source": [
     "## Univariate Probability Distributions\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6456890",
+   "id": "00f88703",
    "metadata": {},
    "source": [
     "### Discrete random variable\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f6a9d6",
+   "id": "3be6372b",
    "metadata": {},
    "source": [
     "### Continuous random variable\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342665bd",
+   "id": "b67c9574",
    "metadata": {},
    "source": [
     "## Bivariate Probability Distributions\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "511402e4",
+   "id": "fd9e81e7",
    "metadata": {},
    "source": [
     "## Marginal Probability Distributions\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33f1f16",
+   "id": "60165e38",
    "metadata": {},
    "source": [
     "## Conditional Probability  Distributions\n",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93286b4d",
+   "id": "8b5d1c0e",
    "metadata": {},
    "source": [
     "## Statistical Independence\n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7426c7",
+   "id": "506a4a1c",
    "metadata": {},
    "source": [
     "## Means and Variances\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b01090ad",
+   "id": "71890251",
    "metadata": {},
    "source": [
     "## Generating Random Numbers\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a7b76f",
+   "id": "72b3cfcf",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91630c7b",
+   "id": "78c6c867",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cfcb6e",
+   "id": "66c73c9d",
    "metadata": {},
    "source": [
     "**Geometric distribution**\n",
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d3cf24",
+   "id": "cc240bef",
    "metadata": {
     "hide-output": false
    },
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6c0133f",
+   "id": "946bc9ed",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a625799",
+   "id": "a3fc5b58",
    "metadata": {
     "hide-output": false
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e8d7e83",
+   "id": "0887e9f2",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdae28c8",
+   "id": "f2230d82",
    "metadata": {},
    "source": [
     "## Some Discrete Probability Distributions\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef5f0f8e",
+   "id": "0ba47627",
    "metadata": {},
    "source": [
     "## Geometric distribution\n",
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4d33f9e",
+   "id": "95540747",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b50e3a12",
+   "id": "284dd762",
    "metadata": {},
    "source": [
     "### Newcomb–Benford distribution\n",
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f6b6190",
+   "id": "3a2ddf23",
    "metadata": {
     "hide-output": false
    },
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f0b242",
+   "id": "96242f68",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2f2c34",
+   "id": "ea739ac5",
    "metadata": {},
    "source": [
     "### Pascal (negative binomial) distribution\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e25d83",
+   "id": "47584805",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce24fc3",
+   "id": "4ec5f5f7",
    "metadata": {},
    "source": [
     "## Continuous Random Variables"
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6476aa9",
+   "id": "d6cbfbea",
    "metadata": {},
    "source": [
     "### Univariate Gaussian distribution\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51f9a5db",
+   "id": "8701acb6",
    "metadata": {
     "hide-output": false
    },
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58843363",
+   "id": "b1cace60",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce6352e",
+   "id": "0afde472",
    "metadata": {},
    "source": [
     "### Uniform Distribution\n",
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe5ecc8",
+   "id": "794b84ef",
    "metadata": {
     "hide-output": false
    },
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf278c15",
+   "id": "0945f4b1",
    "metadata": {},
    "source": [
     "## A Mixed Discrete-Continuous Distribution\n",
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "284839a1",
+   "id": "858624a7",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d4ce5d3",
+   "id": "e3f31afd",
    "metadata": {},
    "source": [
     "The analytical mean and variance can be computed:\n",
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42dbc11b",
+   "id": "ca1a2d40",
    "metadata": {
     "hide-output": false
    },
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c9ea7f",
+   "id": "19bf2355",
    "metadata": {},
    "source": [
     "## Matrix Representation of Some Bivariate Distributions\n",
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bede1c8",
+   "id": "0b9d6a5d",
    "metadata": {
     "hide-output": false
    },
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd830f40",
+   "id": "363685ed",
    "metadata": {},
    "source": [
     "Here, we use exactly the inverse CDF technique to generate sample from the joint distribution $ F $."
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70b60202",
+   "id": "8afde44b",
    "metadata": {
     "hide-output": false
    },
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "383d6a4a",
+   "id": "0828f5bb",
    "metadata": {
     "hide-output": false
    },
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816a6f43",
+   "id": "773432d2",
    "metadata": {},
    "source": [
     "Let’s  calculate population  marginal and conditional probabilities  using matrix algebra.\n",
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9646d1",
+   "id": "bfbea415",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c662eef5",
+   "id": "4ae221b2",
    "metadata": {},
    "source": [
     "Let’s apply our code to some examples.\n",
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed03c11",
+   "id": "07342f7c",
    "metadata": {
     "hide-output": false
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31192c16",
+   "id": "ed1ce814",
    "metadata": {
     "hide-output": false
    },
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24c040f9",
+   "id": "73665c00",
    "metadata": {
     "hide-output": false
    },
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc1c065",
+   "id": "4e786071",
    "metadata": {},
    "source": [
     "**Example 2**"
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a76d82",
+   "id": "ac373207",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704342c6",
+   "id": "c7bb0334",
    "metadata": {
     "hide-output": false
    },
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc548dda",
+   "id": "feba174f",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cddab70b",
+   "id": "a926043f",
    "metadata": {},
    "source": [
     "## A Continuous Bivariate Random Vector\n",
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b6f764",
+   "id": "2735c51f",
    "metadata": {
     "hide-output": false
    },
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab168fac",
+   "id": "e7d69385",
    "metadata": {
     "hide-output": false
    },
@@ -1691,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4d53939",
+   "id": "ccae802b",
    "metadata": {
     "hide-output": false
    },
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf61728",
+   "id": "f6a6de7e",
    "metadata": {},
    "source": [
     "**Joint Distribution**\n",
@@ -1715,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e40b7f43",
+   "id": "4f2c9056",
    "metadata": {
     "hide-output": false
    },
@@ -1733,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0811759",
+   "id": "2cc21f2b",
    "metadata": {
     "hide-output": false
    },
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0112a15",
+   "id": "ca2cfb96",
    "metadata": {},
    "source": [
     "Next  we can simulate from  a built-in `numpy` function  and calculate a **sample** marginal distribution from the sample mean and variance."
@@ -1762,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4949ff",
+   "id": "f1c7de00",
    "metadata": {
     "hide-output": false
    },
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83120d1",
+   "id": "886867c3",
    "metadata": {},
    "source": [
     "**Marginal distribution**"
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111cde24",
+   "id": "b20b3e9f",
    "metadata": {
     "hide-output": false
    },
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440d913e",
+   "id": "55f5c568",
    "metadata": {
     "hide-output": false
    },
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec3ee19",
+   "id": "8928d2fa",
    "metadata": {},
    "source": [
     "**Conditional distribution**\n",
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25cf4c93",
+   "id": "810db9c4",
    "metadata": {
     "hide-output": false
    },
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f259c792",
+   "id": "f33abf0a",
    "metadata": {},
    "source": [
     "The mean and variance are computed by\n",
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea9ca8a8",
+   "id": "5caa3d2f",
    "metadata": {
     "hide-output": false
    },
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "573afa9c",
+   "id": "19734176",
    "metadata": {},
    "source": [
     "Fix $ x=1 $."
@@ -1910,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ca7542c",
+   "id": "7e029704",
    "metadata": {
     "hide-output": false
    },
@@ -1925,7 +1925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22f3c9b2",
+   "id": "18a56395",
    "metadata": {
     "hide-output": false
    },
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57d071e",
+   "id": "498d1194",
    "metadata": {},
    "source": [
     "We compare  with the analytically computed parameters and note that they are close."
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e3704e",
+   "id": "bdd4a923",
    "metadata": {
     "hide-output": false
    },
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0913b3",
+   "id": "07689f5b",
    "metadata": {},
    "source": [
     "## Sum of Two Independently Distributed Random Variables\n",
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e14a4ffc",
+   "id": "485ef1fd",
    "metadata": {},
    "source": [
     "## Transition Probability Matrix\n",
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46dffcbe",
+   "id": "dee82b82",
    "metadata": {},
    "source": [
     "## Coupling\n",
@@ -2192,7 +2192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f14aea52",
+   "id": "524c4d7f",
    "metadata": {},
    "source": [
     "## Copula Functions\n",
@@ -2245,7 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44ff8be",
+   "id": "b88950b4",
    "metadata": {
     "hide-output": false
    },
@@ -2273,7 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4010b53e",
+   "id": "09da4e4d",
    "metadata": {
     "hide-output": false
    },
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b2a0b7",
+   "id": "8781e5dd",
    "metadata": {},
    "source": [
     "Let’s now take our two marginal  distributions, one for $ X $, the other for  $ Y $, and construct  two distinct couplings.\n",
@@ -2327,7 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e342faec",
+   "id": "dffa9787",
    "metadata": {
     "hide-output": false
    },
@@ -2362,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ef18ca",
+   "id": "50d4eb1f",
    "metadata": {
     "hide-output": false
    },
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c249bc7c",
+   "id": "dc4c2977",
    "metadata": {
     "hide-output": false
    },
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6a398e",
+   "id": "c562e257",
    "metadata": {},
    "source": [
     "Now, let’s construct another  joint distribution that is  also a coupling of $ X $ and $ Y $\n",
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bdad6a7",
+   "id": "b0eed801",
    "metadata": {
     "hide-output": false
    },
@@ -2467,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83e5222a",
+   "id": "86868694",
    "metadata": {
     "hide-output": false
    },
@@ -2493,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a32a8e34",
+   "id": "47728c58",
    "metadata": {
     "hide-output": false
    },
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9295172",
+   "id": "152f8294",
    "metadata": {},
    "source": [
     "We have verified that both joint distributions, $ c_1 $ and $ c_2 $, have identical marginal distributions of $ X $ and $ Y $, respectively.\n",
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e7bbc1",
+   "id": "b56a74fd",
    "metadata": {},
    "source": [
     "## Time Series\n",
@@ -2568,7 +2568,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493930.085523,
+  "date": 1706589241.1195192,
   "filename": "prob_matrix.md",
   "kernelspec": {
    "display_name": "Python",
