--- a/rand_resp.ipynb
+++ b/rand_resp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a943b8d5",
+   "id": "662cd0d7",
    "metadata": {},
    "source": [
     "# Randomized Response Surveys"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d5add1",
+   "id": "f2d3ac99",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -21,7 +21,7 @@
     "\n",
     "These problems induce  **selection**  biases that present challenges to interpreting and designing surveys.\n",
     "\n",
-    "To illustrate how social scientists have thought about estimating the prevalence of such embarrassing activities and opinions, this lecture describes a classic approach  of S. L. Warner [[War65](https://python.quantecon.org/zreferences.html#id249)].\n",
+    "To illustrate how social scientists have thought about estimating the prevalence of such embarrassing activities and opinions, this lecture describes a classic approach  of S. L. Warner [[War65](https://stats.quantecon.org/zreferences.html#id249)].\n",
     "\n",
     "Warner  used elementary  probability to construct a  way to protect the privacy  of **individual** respondents to surveys while still    estimating  the fraction of a **collection** of individuals   who have a socially stigmatized characteristic or who engage in  a socially stigmatized activity.\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d635ffe",
+   "id": "5bac5f54",
    "metadata": {},
    "source": [
     "## Warner’s Strategy\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa7cc3e6",
+   "id": "e91aad8f",
    "metadata": {
     "hide-output": false
    },
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2168337",
+   "id": "cb792d96",
    "metadata": {},
    "source": [
     "Suppose that every person in population either belongs to Group A or Group B.\n",
     "\n",
     "We want to estimate the proportion $ \\pi $ who belong to Group A while protecting individual respondents’ privacy.\n",
     "\n",
-    "Warner [[War65](https://python.quantecon.org/zreferences.html#id249)] proposed and analyzed the following procedure.\n",
+    "Warner [[War65](https://stats.quantecon.org/zreferences.html#id249)] proposed and analyzed the following procedure.\n",
     "\n",
     "- A  random sample of $ n $ people is drawn with replacement from the population and  each person is interviewed.  \n",
     "- Draw $ n $ random samples from the population with replacement and interview each person.  \n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52afdc53",
+   "id": "304e5ecd",
    "metadata": {},
    "source": [
     "## Comparing Two Survey Designs\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9cf6b0a",
+   "id": "ee6b9723",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f907c1",
+   "id": "8cd53efd",
    "metadata": {},
    "source": [
     "Let’s put the code to work for parameter values\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553b50be",
+   "id": "693d4088",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e5eb1ad",
+   "id": "fada7b27",
    "metadata": {
     "hide-output": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3974eb7d",
+   "id": "9690e150",
    "metadata": {},
    "source": [
     "The theoretical calculations  do a good job of predicting  Monte Carlo results.\n",
@@ -360,7 +360,7 @@
     "\n",
     "By adjusting  parameters $ \\pi_A $ and $ n $, we can study outcomes in different situations.\n",
     "\n",
-    "For example, for another situation described in Warner [[War65](https://python.quantecon.org/zreferences.html#id249)]:\n",
+    "For example, for another situation described in Warner [[War65](https://stats.quantecon.org/zreferences.html#id249)]:\n",
     "\n",
     "- $ \\pi_A=0.5 $  \n",
     "- $ n=1000 $  \n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4db8edf3",
+   "id": "74422cd3",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777ff7e1",
+   "id": "406e21ec",
    "metadata": {
     "hide-output": false
    },
@@ -398,10 +398,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f6b468",
+   "id": "98b3d215",
    "metadata": {},
    "source": [
-    "We can also revisit a calculation in the  concluding section of Warner [[War65](https://python.quantecon.org/zreferences.html#id249)] in which\n",
+    "We can also revisit a calculation in the  concluding section of Warner [[War65](https://stats.quantecon.org/zreferences.html#id249)] in which\n",
     "\n",
     "- $ \\pi_A=0.6 $  \n",
     "- $ n=2000 $  \n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ced4dab0",
+   "id": "41565f80",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d4debb8",
+   "id": "a6139fa1",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e792cc",
+   "id": "12815340",
    "metadata": {},
    "source": [
     "Evidently, as $ n $ increases, the randomized response method does  better performance in more situations."
@@ -447,20 +447,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5471cd03",
+   "id": "e41ce162",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
     "\n",
-    "[This QuantEcon lecture](https://python.quantecon.org/util_rand_resp.html)  describes some alternative randomized response surveys.\n",
+    "[This QuantEcon lecture](https://stats.quantecon.org/util_rand_resp.html)  describes some alternative randomized response surveys.\n",
     "\n",
     "That lecture presents a utilitarian analysis of those alternatives conducted by Lars Ljungqvist\n",
-    "[[Lju93](https://python.quantecon.org/zreferences.html#id250)]."
+    "[[Lju93](https://stats.quantecon.org/zreferences.html#id250)]."
    ]
   }
  ],
  "metadata": {
-  "date": 1706493930.170094,
+  "date": 1706589241.2036023,
   "filename": "rand_resp.md",
   "kernelspec": {
    "display_name": "Python",
