--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0bca3a17",
+   "id": "8c9ae86f",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe55365",
+   "id": "dfd93bbc",
    "metadata": {},
    "source": [
     "# References\n",
@@ -106,7 +106,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493930.325982,
+  "date": 1706589241.4771554,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
