--- a/ar1_turningpts.ipynb
+++ b/ar1_turningpts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e373f7e3",
+   "id": "5ea7e9b2",
    "metadata": {},
    "source": [
     "# Forecasting  an AR(1) Process"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c351c21",
+   "id": "f4cce7c9",
    "metadata": {
     "hide-output": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f7aa25",
+   "id": "e31a80f8",
    "metadata": {},
    "source": [
     "This lecture describes methods for forecasting statistics that are functions of future values of a univariate autogressive process.\n",
@@ -41,7 +41,7 @@
     "\n",
     "**Sample path properties** are things like “time to next turning point” or “time to next recession”.\n",
     "\n",
-    "To investigate sample path properties we’ll use a simulation procedure recommended by Wecker [[Wec79](https://python.quantecon.org/zreferences.html#id247)].\n",
+    "To investigate sample path properties we’ll use a simulation procedure recommended by Wecker [[Wec79](https://stats.quantecon.org/zreferences.html#id247)].\n",
     "\n",
     "To acknowledge uncertainty about parameters, we’ll deploy `pymc` to construct a Bayesian joint posterior distribution for unknown parameters.\n",
     "\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e80db4",
+   "id": "fd618537",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0451e68",
+   "id": "84e869d1",
    "metadata": {},
    "source": [
     "## A Univariate First-Order Autoregressive Process\n",
@@ -134,7 +134,7 @@
     "- the time until the next turning point (positive or negative).  \n",
     "\n",
     "\n",
-    "To accomplish that for situations in which we are uncertain about parameter values, we shall extend Wecker’s [[Wec79](https://python.quantecon.org/zreferences.html#id247)] approach in the following way.\n",
+    "To accomplish that for situations in which we are uncertain about parameter values, we shall extend Wecker’s [[Wec79](https://stats.quantecon.org/zreferences.html#id247)] approach in the following way.\n",
     "\n",
     "- first simulate an initial path of length $ T_0 $;  \n",
     "- for a given prior, draw a sample of size $ N $ from the posterior joint distribution of parameters $ \\left(\\rho,\\sigma\\right) $ after observing the initial path;  \n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f100e5c4",
+   "id": "84574036",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4fde4d",
+   "id": "73328f5b",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7eda9a",
+   "id": "70f673a7",
    "metadata": {},
    "source": [
     "As functions of forecast horizon, the coverage intervals have shapes like those described in\n",
@@ -236,12 +236,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00fb744",
+   "id": "0b2a1c51",
    "metadata": {},
    "source": [
     "## Predictive Distributions of Path Properties\n",
     "\n",
-    "Wecker [[Wec79](https://python.quantecon.org/zreferences.html#id247)] proposed using simulation techniques to characterize  predictive distribution of some statistics that are  non-linear functions of $ y $.\n",
+    "Wecker [[Wec79](https://stats.quantecon.org/zreferences.html#id247)] proposed using simulation techniques to characterize  predictive distribution of some statistics that are  non-linear functions of $ y $.\n",
     "\n",
     "He called these functions “path properties” to contrast them with properties of single data points.\n",
     "\n",
@@ -268,7 +268,7 @@
     "W_t(\\omega):= \\inf \\{ k\\geq 1 \\mid Z_{t+k}(\\omega) = 1\\}\n",
     "$$\n",
     "\n",
-    "Wecker  [[Wec79](https://python.quantecon.org/zreferences.html#id247)] also studied **the minimum value of $ Y $ over the next 8 quarters**\n",
+    "Wecker  [[Wec79](https://stats.quantecon.org/zreferences.html#id247)] also studied **the minimum value of $ Y $ over the next 8 quarters**\n",
     "which can be defined as the random variable.\n",
     "\n",
     "$$\n",
@@ -303,12 +303,12 @@
     "- ``after one or two decrease(s), $ Y $ will grow for two consecutive quarters’’  \n",
     "\n",
     "\n",
-    "Following [[Wec79](https://python.quantecon.org/zreferences.html#id247)], we can use simulations to calculate  probabilities of $ P_t $ and $ N_t $ for each period $ t $."
+    "Following [[Wec79](https://stats.quantecon.org/zreferences.html#id247)], we can use simulations to calculate  probabilities of $ P_t $ and $ N_t $ for each period $ t $."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d4ff7e21",
+   "id": "a9480663",
    "metadata": {},
    "source": [
     "## A Wecker-Like Algorithm\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e58e2a64",
+   "id": "b65ddada",
    "metadata": {},
    "source": [
     "## Using Simulations to Approximate a Posterior Distribution\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddbe5ef",
+   "id": "493231de",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55706166",
+   "id": "9fbab282",
    "metadata": {},
    "source": [
     "The graphs on the left portray posterior marginal distributions."
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa412f9a",
+   "id": "2cea8163",
    "metadata": {},
    "source": [
     "## Calculating Sample Path Statistics\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e825520",
+   "id": "8023fa94",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943c508e",
+   "id": "1ed95487",
    "metadata": {},
    "source": [
     "## Original Wecker Method\n",
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee67b851",
+   "id": "1ac11d74",
    "metadata": {
     "hide-output": false
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc5d1d3d",
+   "id": "92549e38",
    "metadata": {},
    "source": [
     "## Extended Wecker Method\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64f71414",
+   "id": "d3fbe928",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c8f70e",
+   "id": "8737b905",
    "metadata": {},
    "source": [
     "## Comparison\n",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be9adb16",
+   "id": "5b5b58a9",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493928.7100508,
+  "date": 1706589239.734375,
   "filename": "ar1_turningpts.md",
   "kernelspec": {
    "display_name": "Python",
