--- a/bayes_nonconj.ipynb
+++ b/bayes_nonconj.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6fcfe07b",
+   "id": "ffc6c94a",
    "metadata": {},
    "source": [
     "# Non-Conjugate Priors\n",
     "\n",
-    "This lecture is a sequel to the [quantecon lecture](https://python.quantecon.org/prob_meaning.html).\n",
+    "This lecture is a sequel to the [quantecon lecture](https://stats.quantecon.org/prob_meaning.html).\n",
     "\n",
     "That lecture offers a Bayesian interpretation of probability in a setting in which the likelihood function and the prior distribution\n",
     "over parameters just happened to form a **conjugate** pair in which\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb400b98",
+   "id": "2e12f7f6",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76031d10",
+   "id": "61085a96",
    "metadata": {
     "hide-output": false
    },
@@ -96,12 +96,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d41cd0ca",
+   "id": "831727a8",
    "metadata": {},
    "source": [
     "## Unleashing MCMC on a  Binomial Likelihood\n",
     "\n",
-    "This lecture begins with the binomial example in the [quantecon lecture](https://python.quantecon.org/prob_meaning.html).\n",
+    "This lecture begins with the binomial example in the [quantecon lecture](https://stats.quantecon.org/prob_meaning.html).\n",
     "\n",
     "That lecture computed a posterior\n",
     "\n",
@@ -118,12 +118,12 @@
     "\n",
     "We use several alternative prior distributions\n",
     "\n",
-    "We  compare computed posteriors  with ones associated with a conjugate prior as described in  [the quantecon lecture](https://python.quantecon.org/prob_meaning.html)"
+    "We  compare computed posteriors  with ones associated with a conjugate prior as described in  [the quantecon lecture](https://stats.quantecon.org/prob_meaning.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e525c8b",
+   "id": "22d02b33",
    "metadata": {},
    "source": [
     "### Analytical Posterior\n",
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ae326d5",
+   "id": "3a788bb0",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad4e712",
+   "id": "4a43d109",
    "metadata": {},
    "source": [
     "### Two Ways to Approximate Posteriors\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1c100d",
+   "id": "edc3a7e9",
    "metadata": {},
    "source": [
     "## Prior Distributions\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf0a121",
+   "id": "16fb2296",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "817bd2e3",
+   "id": "04b43b53",
    "metadata": {},
    "source": [
     "### Variational Inference\n",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b97b24a",
+   "id": "d44105be",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50d7115",
+   "id": "a655c8c7",
    "metadata": {
     "hide-output": false
    },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab3699aa",
+   "id": "657fd0cc",
    "metadata": {},
    "source": [
     "## Alternative Prior Distributions\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d916a0be",
+   "id": "3e113119",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d148b7",
+   "id": "a174d04b",
    "metadata": {},
    "source": [
     "The above graphs show that sampling seems to work well with both distributions.\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9701fc7",
+   "id": "332cac03",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e09c2eb4",
+   "id": "50daf585",
    "metadata": {},
    "source": [
     "These graphs look good too.\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46000bbe",
+   "id": "1d54b19a",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f118de",
+   "id": "f1adedaa",
    "metadata": {},
    "source": [
     "Having assured ourselves that our sampler seems to do a good job, let’s put it to work in using MCMC to compute posterior probabilities."
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c6ab77",
+   "id": "6cf33a61",
    "metadata": {},
    "source": [
     "## Posteriors Via MCMC and VI\n",
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ee69c2",
+   "id": "c14a6706",
    "metadata": {
     "hide-output": false
    },
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd31eae3",
+   "id": "34b99653",
    "metadata": {},
    "source": [
     "Let’s set some parameters that we’ll use in all of the examples  below.\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d47aa76a",
+   "id": "133b6e1e",
    "metadata": {
     "hide-output": false
    },
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94aeb23c",
+   "id": "328c03e3",
    "metadata": {},
    "source": [
     "### Beta Prior and Posteriors:\n",
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec8b2d43",
+   "id": "d39dfdf7",
    "metadata": {
     "hide-output": false
    },
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1647c84",
+   "id": "9b790f26",
    "metadata": {},
    "source": [
     "Now let’s use MCMC while still using a beta prior.\n",
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03785d88",
+   "id": "dc983951",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30169cbc",
+   "id": "494e03ed",
    "metadata": {},
    "source": [
     "Here the MCMC approximation looks good.\n",
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0055cc5b",
+   "id": "15d9ea33",
    "metadata": {
     "hide-output": false
    },
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7254848",
+   "id": "c31912f0",
    "metadata": {},
    "source": [
     "## Non-conjugate Prior Distributions\n",
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd4220e",
+   "id": "1cdaa795",
    "metadata": {},
    "source": [
     "### MCMC\n",
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b9fe05",
+   "id": "0d53fdad",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "374e90ef",
+   "id": "73217311",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae9ec73",
+   "id": "c3fc3603",
    "metadata": {},
    "source": [
     "In the situation depicted above, we have assumed a  $ Uniform(\\underline{\\theta}, \\overline{\\theta}) $ prior that puts zero probability   outside a bounded support that excludes the true value.\n",
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b696fd4",
+   "id": "192e45da",
    "metadata": {
     "hide-output": false
    },
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33af741b",
+   "id": "5bb119ef",
    "metadata": {
     "hide-output": false
    },
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4361f739",
+   "id": "c99b9c4b",
    "metadata": {
     "hide-output": false
    },
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08388f8b",
+   "id": "3dadfe37",
    "metadata": {},
    "source": [
     "To get more accuracy we will now increase the number of steps for Variational Inference (VI)"
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc04736",
+   "id": "eb3274f1",
    "metadata": {
     "hide-output": false
    },
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc72bd3",
+   "id": "a93bc24e",
    "metadata": {},
    "source": [
     "#### VI with a  Truncated Normal Guide"
@@ -1301,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ff4f7d",
+   "id": "cd0568a4",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50daaafd",
+   "id": "c6f78cbc",
    "metadata": {
     "hide-output": false
    },
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e61b14fd",
+   "id": "6d0e1eb9",
    "metadata": {
     "hide-output": false
    },
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3839b160",
+   "id": "6a7ec3e6",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe76231b",
+   "id": "badff641",
    "metadata": {},
    "source": [
     "#### Variational Inference with a  Beta Guide Distribution"
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d6fc50",
+   "id": "3286a64a",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fbe1edf",
+   "id": "930abff7",
    "metadata": {
     "hide-output": false
    },
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32717e7e",
+   "id": "8c7b0b1a",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cc76fb6",
+   "id": "7b957bd3",
    "metadata": {
     "hide-output": false
    },
@@ -1439,7 +1439,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493928.8501415,
+  "date": 1706589239.8827481,
   "filename": "bayes_nonconj.md",
   "kernelspec": {
    "display_name": "Python",
