--- a/exchangeable.ipynb
+++ b/exchangeable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0042c2d0",
+   "id": "132222de",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f77e3355",
+   "id": "9f6f6fe9",
    "metadata": {},
    "source": [
     "# Exchangeability and Bayesian Updating"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cac594",
+   "id": "75482a2b",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2e6e9e",
+   "id": "667d6ac4",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,14 +46,14 @@
     "This lecture studies  learning\n",
     "via Bayes’ Law.\n",
     "\n",
-    "We touch foundations of Bayesian statistical inference invented by Bruno DeFinetti [[dF37](https://python.quantecon.org/zreferences.html#id31)].\n",
+    "We touch foundations of Bayesian statistical inference invented by Bruno DeFinetti [[dF37](https://stats.quantecon.org/zreferences.html#id31)].\n",
     "\n",
     "The relevance of DeFinetti’s work for economists is presented forcefully\n",
-    "in chapter 11 of [[Kre88](https://python.quantecon.org/zreferences.html#id97)] by David Kreps.\n",
+    "in chapter 11 of [[Kre88](https://stats.quantecon.org/zreferences.html#id97)] by David Kreps.\n",
     "\n",
     "An example  that we study in this lecture  is a key component of [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html) that augments the\n",
     "[classic](https://quantecon.github.io/lecture-dynamics/mccall_model.html)  job search model of McCall\n",
-    "[[McC70](https://python.quantecon.org/zreferences.html#id181)] by presenting an unemployed worker with a statistical inference problem.\n",
+    "[[McC70](https://stats.quantecon.org/zreferences.html#id181)] by presenting an unemployed worker with a statistical inference problem.\n",
     "\n",
     "Here we create  graphs that illustrate the role that  a  likelihood ratio\n",
     "plays in  Bayes’ Law.\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f0c2c4b",
+   "id": "a487c4f5",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfcf48e1",
+   "id": "74bd3f20",
    "metadata": {},
    "source": [
     "## Independently and Identically Distributed\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8104a019",
+   "id": "4b704e73",
    "metadata": {},
    "source": [
     "### IID Means Past Observations Don’t Tell Us Anything About Future Observations\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d82827",
+   "id": "7c1c7c96",
    "metadata": {},
    "source": [
     "## A Setting in Which Past Observations Are Informative\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f487a60",
+   "id": "2a4334e5",
    "metadata": {},
    "source": [
     "## Relationship Between IID and Exchangeable\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c437e31",
+   "id": "1eb2d6ea",
    "metadata": {},
    "source": [
     "## Exchangeability\n",
@@ -338,7 +338,7 @@
     "For a Bayesian statistician, the mixing parameter $ \\tilde \\pi \\in (0,1) $ has a special interpretation\n",
     "as a subjective **prior probability** that nature selected probability distribution $ F $.\n",
     "\n",
-    "DeFinetti [[dF37](https://python.quantecon.org/zreferences.html#id31)] established a related representation of an exchangeable process created by mixing\n",
+    "DeFinetti [[dF37](https://stats.quantecon.org/zreferences.html#id31)] established a related representation of an exchangeable process created by mixing\n",
     "sequences of IID Bernoulli random variables with parameter $ \\theta \\in (0,1) $ and mixing probability density $ \\pi(\\theta) $\n",
     "that a Bayesian statistician would interpret as a prior over the unknown\n",
     "Bernoulli parameter $ \\theta $."
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9036b2d5",
+   "id": "8e3d4d24",
    "metadata": {},
    "source": [
     "## Bayes’ Law\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78597fd6",
+   "id": "739723f5",
    "metadata": {},
    "source": [
     "## More Details about Bayesian Updating\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a736f881",
+   "id": "b564f6f4",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "858927b0",
+   "id": "0c735570",
    "metadata": {},
    "source": [
     "Now we’ll create a group of graphs that illustrate  dynamics induced by Bayes’ Law.\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "379fb84a",
+   "id": "8ee04c90",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcfdaff",
+   "id": "ca37b885",
    "metadata": {},
    "source": [
     "Please look at the three graphs above created for an instance in which $ f $ is a uniform distribution on $ [0,1] $\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e11a9bca",
+   "id": "7e2d0613",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b60e74da",
+   "id": "f1520f7a",
    "metadata": {},
    "source": [
     "Notice how the likelihood ratio, the middle graph, and the arrows compare with the previous instance of our example."
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e8299ea",
+   "id": "c486c5b6",
    "metadata": {},
    "source": [
     "## Appendix"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d836ad7d",
+   "id": "acb6bad2",
    "metadata": {},
    "source": [
     "### Sample Paths of $ \\pi_t $\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab2bb000",
+   "id": "bb29bb7a",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30660b8e",
+   "id": "e1e50e60",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd5cc8be",
+   "id": "986489ed",
    "metadata": {},
    "source": [
     "We begin by generating $ N $ simulated $ \\{\\pi_t\\} $ paths with $ T $\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdd0602",
+   "id": "c3bf5321",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44dcba96",
+   "id": "05054d93",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2149f294",
+   "id": "6fb6962c",
    "metadata": {},
    "source": [
     "In the above example,  for most paths $ \\pi_t \\rightarrow 1 $.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f521dd",
+   "id": "93bfa78d",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27749b8e",
+   "id": "fd9439df",
    "metadata": {},
    "source": [
     "In the above graph we observe that now  most paths $ \\pi_t \\rightarrow 0 $."
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b27f0d7",
+   "id": "ed7f4c63",
    "metadata": {},
    "source": [
     "### Rates of convergence\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e03981d0",
+   "id": "ddbd0bf9",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5873b2f",
+   "id": "923d9316",
    "metadata": {},
    "source": [
     "From the above graph, rates of convergence appear not to depend on whether $ F $ or $ G $ generates the data."
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9639594",
+   "id": "9b4713f0",
    "metadata": {},
    "source": [
     "### Graph of Ensemble Dynamics of $ \\pi_t $\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f546b9b",
+   "id": "a54f4d4a",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813b71e9",
+   "id": "02e7fa8e",
    "metadata": {},
    "source": [
     "First, consider the case where $ F_a=F_b=1 $ and\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9f39ea",
+   "id": "7ad1ba7e",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b979ca",
+   "id": "f17f3cf0",
    "metadata": {},
    "source": [
     "The above graphs shows that when $ F $ generates the data, $ \\pi_t $ on average always heads north, while\n",
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e5e842",
+   "id": "47b4fef5",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ab96c57",
+   "id": "ac33c095",
    "metadata": {},
    "source": [
     "The above graph says that $ \\pi_t $ is inert and  remains at its initial value.\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16938de0",
+   "id": "2e209559",
    "metadata": {
     "hide-output": false
    },
@@ -991,23 +991,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e06f2007",
+   "id": "4a149d58",
    "metadata": {},
    "source": [
     "## Sequels\n",
     "\n",
     "We’ll apply and dig deeper into some of the ideas presented in this lecture:\n",
     "\n",
-    "- [this lecture](https://python.quantecon.org/likelihood_ratio_process.html) describes **likelihood ratio processes**\n",
+    "- [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html) describes **likelihood ratio processes**\n",
     "  and their role in frequentist and Bayesian statistical theories  \n",
-    "- [this lecture](https://python.quantecon.org/navy_captain.html) studies  whether a World War II US Navy Captain’s hunch that a (frequentist) decision rule that the Navy had told\n",
+    "- [this lecture](https://stats.quantecon.org/navy_captain.html) studies  whether a World War II US Navy Captain’s hunch that a (frequentist) decision rule that the Navy had told\n",
     "  him to use was  inferior to a sequential rule that Abraham\n",
     "  Wald had not yet designed.  "
    ]
   }
  ],
  "metadata": {
-  "date": 1706493928.9074676,
+  "date": 1706589240.0437174,
   "filename": "exchangeable.md",
   "kernelspec": {
    "display_name": "Python",
