--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c85db7a",
+   "id": "d23efaea",
    "metadata": {},
    "source": [
     "# Statistics for Computational Economics\n",
@@ -12,68 +12,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47fcce9b",
+   "id": "58f7dd34",
    "metadata": {},
    "source": [
     "# Elementary Statistics\n",
     "\n",
-    "- [Pandas for Panel Data](https://python.quantecon.org/pandas_panel.html)\n",
-    "- [Linear Regression in Python](https://python.quantecon.org/ols.html)\n",
-    "- [Maximum Likelihood Estimation](https://python.quantecon.org/mle.html)\n",
-    "- [Elementary Probability with Matrices](https://python.quantecon.org/prob_matrix.html)\n",
-    "- [LLN and CLT](https://python.quantecon.org/lln_clt.html)\n",
-    "- [Multivariate Normal Distribution](https://python.quantecon.org/multivariate_normal.html)"
+    "- [Pandas for Panel Data](https://stats.quantecon.org/pandas_panel.html)\n",
+    "- [Linear Regression in Python](https://stats.quantecon.org/ols.html)\n",
+    "- [Maximum Likelihood Estimation](https://stats.quantecon.org/mle.html)\n",
+    "- [Elementary Probability with Matrices](https://stats.quantecon.org/prob_matrix.html)\n",
+    "- [LLN and CLT](https://stats.quantecon.org/lln_clt.html)\n",
+    "- [Multivariate Normal Distribution](https://stats.quantecon.org/multivariate_normal.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ce55cf9",
+   "id": "dc202055",
    "metadata": {},
    "source": [
     "# Information & Bayesian Statistics\n",
     "\n",
-    "- [Two Meanings of Probability](https://python.quantecon.org/prob_meaning.html)\n",
-    "- [Non-Conjugate Priors](https://python.quantecon.org/bayes_nonconj.html)\n",
-    "- [Posterior Distributions for  AR(1) Parameters](https://python.quantecon.org/ar1_bayes.html)\n",
-    "- [Forecasting  an AR(1) Process](https://python.quantecon.org/ar1_turningpts.html)\n",
-    "- [Likelihood Ratio Processes](https://python.quantecon.org/likelihood_ratio_process.html)\n",
-    "- [Computing Mean of a Likelihood Ratio Process](https://python.quantecon.org/imp_sample.html)\n",
-    "- [A Problem that Stumped Milton Friedman](https://python.quantecon.org/wald_friedman.html)\n",
-    "- [Exchangeability and Bayesian Updating](https://python.quantecon.org/exchangeable.html)\n",
-    "- [Likelihood Ratio Processes and Bayesian Learning](https://python.quantecon.org/likelihood_bayes.html)\n",
-    "- [Incorrect Models](https://python.quantecon.org/mix_model.html)\n",
-    "- [Bayesian versus Frequentist Decision Rules](https://python.quantecon.org/navy_captain.html)"
+    "- [Two Meanings of Probability](https://stats.quantecon.org/prob_meaning.html)\n",
+    "- [Non-Conjugate Priors](https://stats.quantecon.org/bayes_nonconj.html)\n",
+    "- [Posterior Distributions for  AR(1) Parameters](https://stats.quantecon.org/ar1_bayes.html)\n",
+    "- [Forecasting  an AR(1) Process](https://stats.quantecon.org/ar1_turningpts.html)\n",
+    "- [Likelihood Ratio Processes](https://stats.quantecon.org/likelihood_ratio_process.html)\n",
+    "- [Computing Mean of a Likelihood Ratio Process](https://stats.quantecon.org/imp_sample.html)\n",
+    "- [A Problem that Stumped Milton Friedman](https://stats.quantecon.org/wald_friedman.html)\n",
+    "- [Exchangeability and Bayesian Updating](https://stats.quantecon.org/exchangeable.html)\n",
+    "- [Likelihood Ratio Processes and Bayesian Learning](https://stats.quantecon.org/likelihood_bayes.html)\n",
+    "- [Incorrect Models](https://stats.quantecon.org/mix_model.html)\n",
+    "- [Bayesian versus Frequentist Decision Rules](https://stats.quantecon.org/navy_captain.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5fc69e8d",
+   "id": "b0bc676d",
    "metadata": {},
    "source": [
     "# Applications of Statistics\n",
     "\n",
-    "- [Multivariate Hypergeometric Distribution](https://python.quantecon.org/multi_hyper.html)\n",
-    "- [Fault Tree Uncertainties](https://python.quantecon.org/hoist_failure.html)\n",
-    "- [Introduction to Artificial Neural Networks](https://python.quantecon.org/back_prop.html)\n",
-    "- [Randomized Response Surveys](https://python.quantecon.org/rand_resp.html)\n",
-    "- [Expected Utilities of Random Responses](https://python.quantecon.org/util_rand_resp.html)"
+    "- [Multivariate Hypergeometric Distribution](https://stats.quantecon.org/multi_hyper.html)\n",
+    "- [Fault Tree Uncertainties](https://stats.quantecon.org/hoist_failure.html)\n",
+    "- [Introduction to Artificial Neural Networks](https://stats.quantecon.org/back_prop.html)\n",
+    "- [Randomized Response Surveys](https://stats.quantecon.org/rand_resp.html)\n",
+    "- [Expected Utilities of Random Responses](https://stats.quantecon.org/util_rand_resp.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96763865",
+   "id": "482c2058",
    "metadata": {},
    "source": [
     "# Other\n",
     "\n",
-    "- [Troubleshooting](https://python.quantecon.org/troubleshooting.html)\n",
-    "- [References](https://python.quantecon.org/zreferences.html)\n",
-    "- [Execution Statistics](https://python.quantecon.org/status.html)"
+    "- [Troubleshooting](https://stats.quantecon.org/troubleshooting.html)\n",
+    "- [References](https://stats.quantecon.org/zreferences.html)\n",
+    "- [Execution Statistics](https://stats.quantecon.org/status.html)"
    ]
   }
  ],
  "metadata": {
-  "date": 1706493929.1364436,
+  "date": 1706589240.1554832,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
