--- a/lln_clt.ipynb
+++ b/lln_clt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32fb8ee1",
+   "id": "f71628ed",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771b5c44",
+   "id": "9365c7e9",
    "metadata": {},
    "source": [
     "# LLN and CLT\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6ea30e",
+   "id": "feb3318e",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61165b2d",
+   "id": "8ff53612",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d210e0",
+   "id": "62355dbe",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94cc6b7",
+   "id": "ddc018f5",
    "metadata": {},
    "source": [
     "## Relationships\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a793231c",
+   "id": "0d1234b9",
    "metadata": {},
    "source": [
     "## LLN\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e28790",
+   "id": "550c39f9",
    "metadata": {},
    "source": [
     "### The Classical LLN\n",
@@ -165,14 +165,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f85e2a",
+   "id": "9671f01f",
    "metadata": {},
    "source": [
     "### Proof\n",
     "\n",
     "\n",
     "<a id='index-5'></a>\n",
-    "The proof of Kolmogorov’s strong law is nontrivial – see, for example, theorem 8.3.5 of [[Dud02](https://python.quantecon.org/zreferences.html#id148)].\n",
+    "The proof of Kolmogorov’s strong law is nontrivial – see, for example, theorem 8.3.5 of [[Dud02](https://stats.quantecon.org/zreferences.html#id148)].\n",
     "\n",
     "On the other hand, we can prove a weaker version of the LLN very easily and\n",
     "still get most of the intuition.\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e5eaad2",
+   "id": "8c03847b",
    "metadata": {},
    "source": [
     "### Illustration\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc442523",
+   "id": "4988c56b",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d3b796",
+   "id": "f62af91b",
    "metadata": {},
    "source": [
     "The three distributions are chosen at random from a selection stored in the dictionary `distributions`."
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5cfb53",
+   "id": "26230332",
    "metadata": {},
    "source": [
     "## CLT\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536edbab",
+   "id": "04ed82df",
    "metadata": {},
    "source": [
     "### Statement of the Theorem\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98fd3c32",
+   "id": "5093647f",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -392,7 +392,7 @@
     "copies **always** leads to a Gaussian curve.\n",
     "\n",
     "A relatively simple proof of the central limit theorem can be obtained by\n",
-    "working with characteristic functions (see, e.g., theorem 9.5.6 of [[Dud02](https://python.quantecon.org/zreferences.html#id148)]).\n",
+    "working with characteristic functions (see, e.g., theorem 9.5.6 of [[Dud02](https://stats.quantecon.org/zreferences.html#id148)]).\n",
     "\n",
     "The proof is elegant but almost anticlimactic, and it provides surprisingly little intuition.\n",
     "\n",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a02c6af8",
+   "id": "09a97826",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50c72720",
+   "id": "5f481557",
    "metadata": {},
    "source": [
     "When $ n = 1 $, the distribution is flat — one success or no successes\n",
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b10f4a",
+   "id": "31cd1a03",
    "metadata": {},
    "source": [
     "### Simulation 1\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7df547d",
+   "id": "f24a2ae9",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "520945ea",
+   "id": "49d958fb",
    "metadata": {},
    "source": [
     "Notice the absence of for loops — every operation is vectorized, meaning that the major calculations are all shifted to highly optimized C code.\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "788ad830",
+   "id": "5640d116",
    "metadata": {},
    "source": [
     "### Simulation 2\n",
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf65b1f",
+   "id": "1ded0986",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee25f0e",
+   "id": "ce0d4756",
    "metadata": {},
    "source": [
     "As expected, the distribution smooths out into a bell curve as $ n $\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6741b720",
+   "id": "fa4762bf",
    "metadata": {},
    "source": [
     "### The Multivariate Case\n",
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9430ab1",
+   "id": "509ec203",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1832af3a",
+   "id": "532248f6",
    "metadata": {},
    "source": [
     "## Exercise 5.1\n",
@@ -817,10 +817,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e460d40",
+   "id": "0a0fb8f5",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 5.1](https://python.quantecon.org/#lln_ex1)\n",
+    "## Solution to[ Exercise 5.1](https://stats.quantecon.org/#lln_ex1)\n",
     "\n",
     "Here is one solution"
    ]
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e25e5fe",
+   "id": "15ed718b",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1475057a",
+   "id": "9b54872d",
    "metadata": {},
    "source": [
     "What happens when you replace $ [0, \\pi / 2] $ with\n",
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f474318",
+   "id": "58ae0403",
    "metadata": {},
    "source": [
     "## Exercise 5.2\n",
@@ -993,10 +993,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c107db91",
+   "id": "4ef072d8",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 5.2](https://python.quantecon.org/#lln_ex2)\n",
+    "## Solution to[ Exercise 5.2](https://stats.quantecon.org/#lln_ex2)\n",
     "\n",
     "First we want to verify the claim that\n",
     "\n",
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a1c3b39",
+   "id": "8a9f0bcc",
    "metadata": {
     "hide-output": false
    },
@@ -1099,7 +1099,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.2944622,
+  "date": 1706589240.3118367,
   "filename": "lln_clt.md",
   "kernelspec": {
    "display_name": "Python",
