--- a/ols.ipynb
+++ b/ols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1ef2185",
+   "id": "10e524c7",
    "metadata": {},
    "source": [
     "# Linear Regression in Python"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20774f06",
+   "id": "767d0760",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253c9eea",
+   "id": "00f23bc6",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63791c59",
+   "id": "fa63f3e7",
    "metadata": {
     "hide-output": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34332ae1",
+   "id": "d03b9cca",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
     "- two-stage least squares  \n",
     "\n",
     "\n",
-    "As an example, we will replicate results from Acemoglu, Johnson and Robinson’s seminal paper [[AJR01](https://python.quantecon.org/zreferences.html#id82)].\n",
+    "As an example, we will replicate results from Acemoglu, Johnson and Robinson’s seminal paper [[AJR01](https://stats.quantecon.org/zreferences.html#id82)].\n",
     "\n",
     "- You can download a copy [here](https://economics.mit.edu/research/publications/colonial-origins-comparative-development-empirical-investigation).  \n",
     "\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58413909",
+   "id": "097450d3",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c585312c",
+   "id": "b332149d",
    "metadata": {},
    "source": [
     "### Prerequisites\n",
@@ -107,17 +107,17 @@
     "This lecture assumes you are familiar with basic econometrics.\n",
     "\n",
     "For an introductory text covering these topics, see, for example,\n",
-    "[[Woo15](https://python.quantecon.org/zreferences.html#id81)]."
+    "[[Woo15](https://stats.quantecon.org/zreferences.html#id81)]."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c4c3b209",
+   "id": "f2ce8f13",
    "metadata": {},
    "source": [
     "## Simple Linear Regression\n",
     "\n",
-    "[[AJR01](https://python.quantecon.org/zreferences.html#id82)] wish to determine whether or not differences in institutions can help to explain observed economic outcomes.\n",
+    "[[AJR01](https://stats.quantecon.org/zreferences.html#id82)] wish to determine whether or not differences in institutions can help to explain observed economic outcomes.\n",
     "\n",
     "How do we measure *institutional differences* and *economic outcomes*?\n",
     "\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2206ff",
+   "id": "a058ef24",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab97d74",
+   "id": "f52d6f8d",
    "metadata": {},
    "source": [
     "Let’s use a scatterplot to see whether any obvious relationship exists\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96d6f812",
+   "id": "617bdc49",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3404422a",
+   "id": "e2797214",
    "metadata": {},
    "source": [
     "The plot shows a fairly strong positive relationship between\n",
@@ -201,13 +201,13 @@
     "\n",
     "\n",
     "Visually, this linear model involves choosing a straight line that best\n",
-    "fits the data, as in the following plot (Figure 2 in [[AJR01](https://python.quantecon.org/zreferences.html#id82)])"
+    "fits the data, as in the following plot (Figure 2 in [[AJR01](https://stats.quantecon.org/zreferences.html#id82)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f401cfa",
+   "id": "89fa5741",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b759be",
+   "id": "8c70e97b",
    "metadata": {},
    "source": [
     "The most common technique to estimate the parameters ($ \\beta $’s)\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7823053d",
+   "id": "c01f2301",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf9571f",
+   "id": "9445d576",
    "metadata": {},
    "source": [
     "Now we can construct our model in `statsmodels` using the OLS function.\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3636be74",
+   "id": "dacba896",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1307a1c3",
+   "id": "064be159",
    "metadata": {},
    "source": [
     "So far we have simply constructed our model.\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa431a9",
+   "id": "78dc0fd7",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01eb00f6",
+   "id": "b357835e",
    "metadata": {},
    "source": [
     "We now have the fitted regression model stored in `results`.\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff275f74",
+   "id": "f5203e0e",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20bc4e9f",
+   "id": "98e7bdd6",
    "metadata": {},
    "source": [
     "From our results, we see that\n",
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defb2934",
+   "id": "b86952e0",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8285bf41",
+   "id": "f27cea57",
    "metadata": {
     "hide-output": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef6d549e",
+   "id": "8cb0af5e",
    "metadata": {},
    "source": [
     "An easier (and more accurate) way to obtain this result is to use\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74bf6f3",
+   "id": "6dd803d9",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427a0960",
+   "id": "4a9412e3",
    "metadata": {},
    "source": [
     "We can obtain an array of predicted $ {logpgp95}_i $ for every value\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b19571",
+   "id": "dbe4c4c1",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b44d9e7",
+   "id": "9ccb30c9",
    "metadata": {},
    "source": [
     "## Extending the Linear Regression Model\n",
@@ -502,7 +502,7 @@
     "\n",
     "We can extend our bivariate regression model to a **multivariate regression model** by adding in other factors that may affect $ logpgp95_i $.\n",
     "\n",
-    "[[AJR01](https://python.quantecon.org/zreferences.html#id82)] consider other factors such as:\n",
+    "[[AJR01](https://stats.quantecon.org/zreferences.html#id82)] consider other factors such as:\n",
     "\n",
     "- the effect of climate on economic outcomes; latitude is used to proxy\n",
     "  this  \n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6cc2976",
+   "id": "16bd484f",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c0d159",
+   "id": "2431ab32",
    "metadata": {},
    "source": [
     "Now that we have fitted our model, we will use `summary_col` to\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f65fe620",
+   "id": "9644b68d",
    "metadata": {
     "hide-output": false
    },
@@ -582,12 +582,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9963b9ab",
+   "id": "ad23c03c",
    "metadata": {},
    "source": [
     "## Endogeneity\n",
     "\n",
-    "As [[AJR01](https://python.quantecon.org/zreferences.html#id82)] discuss, the OLS models likely suffer from\n",
+    "As [[AJR01](https://stats.quantecon.org/zreferences.html#id82)] discuss, the OLS models likely suffer from\n",
     "**endogeneity** issues, resulting in biased and inconsistent model\n",
     "estimates.\n",
     "\n",
@@ -617,7 +617,7 @@
     "The new set of regressors is called an **instrument**, which aims to\n",
     "remove endogeneity in our proxy of institutional differences.\n",
     "\n",
-    "The main contribution of [[AJR01](https://python.quantecon.org/zreferences.html#id82)] is the use of settler mortality\n",
+    "The main contribution of [[AJR01](https://stats.quantecon.org/zreferences.html#id82)] is the use of settler mortality\n",
     "rates to instrument for institutional differences.\n",
     "\n",
     "They hypothesize that higher mortality rates of colonizers led to the\n",
@@ -625,7 +625,7 @@
     "protection against expropriation), and these institutions still persist\n",
     "today.\n",
     "\n",
-    "Using a scatterplot (Figure 3 in [[AJR01](https://python.quantecon.org/zreferences.html#id82)]), we can see protection\n",
+    "Using a scatterplot (Figure 3 in [[AJR01](https://stats.quantecon.org/zreferences.html#id82)]), we can see protection\n",
     "against expropriation is negatively correlated with settler mortality\n",
     "rates, coinciding with the authors’ hypothesis and satisfying the first\n",
     "condition of a valid instrument."
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e29798",
+   "id": "9dcbd954",
    "metadata": {
     "hide-output": false
    },
@@ -670,14 +670,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe9e32b",
+   "id": "59b693cc",
    "metadata": {},
    "source": [
     "The second condition may not be satisfied if settler mortality rates in the 17th to 19th centuries have a direct effect on current GDP (in addition to their indirect effect through institutions).\n",
     "\n",
     "For example, settler mortality rates may be related to the current disease environment in a country, which could affect current economic performance.\n",
     "\n",
-    "[[AJR01](https://python.quantecon.org/zreferences.html#id82)] argue this is unlikely because:\n",
+    "[[AJR01](https://stats.quantecon.org/zreferences.html#id82)] argue this is unlikely because:\n",
     "\n",
     "- The majority of settler deaths were due to malaria and yellow fever\n",
     "  and had a limited effect on local people.  \n",
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c36cabf",
+   "id": "af425d40",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d9e3e3",
+   "id": "f3b1ee13",
    "metadata": {},
    "source": [
     "**Second stage**\n",
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12503176",
+   "id": "27372537",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ba6f1d",
+   "id": "901a4297",
    "metadata": {},
    "source": [
     "The second-stage regression results give us an unbiased and consistent\n",
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8ea060",
+   "id": "b4c07bcd",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2bd390",
+   "id": "b2e2fa71",
    "metadata": {},
    "source": [
     "Given that we now have consistent and unbiased estimates, we can infer\n",
@@ -820,7 +820,7 @@
     "(stemming from institutions set up during colonization) can help\n",
     "to explain differences in income levels across countries today.\n",
     "\n",
-    "[[AJR01](https://python.quantecon.org/zreferences.html#id82)] use a marginal effect of 0.94 to calculate that the\n",
+    "[[AJR01](https://stats.quantecon.org/zreferences.html#id82)] use a marginal effect of 0.94 to calculate that the\n",
     "difference in the index between Chile and Nigeria (ie. institutional\n",
     "quality) implies up to a 7-fold difference in income, emphasizing the\n",
     "significance of institutions in economic development."
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a85764cf",
+   "id": "c33f6ebc",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f89eae5",
+   "id": "62b55dba",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd6d2c4",
+   "id": "4cf0c843",
    "metadata": {},
    "source": [
     "## Exercise 2.1\n",
@@ -895,16 +895,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925270a1",
+   "id": "fdcb65ca",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 2.1](https://python.quantecon.org/#ols_ex1)"
+    "## Solution to[ Exercise 2.1](https://stats.quantecon.org/#ols_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59973270",
+   "id": "a0db0201",
    "metadata": {
     "hide-output": false
    },
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14455608",
+   "id": "394726ac",
    "metadata": {},
    "source": [
     "The output shows that the coefficient on the residuals is statistically\n",
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3081c05",
+   "id": "5fb1fcbe",
    "metadata": {},
    "source": [
     "## Exercise 2.2\n",
@@ -987,16 +987,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d17731",
+   "id": "1898f0ae",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 2.2](https://python.quantecon.org/#ols_ex2)"
+    "## Solution to[ Exercise 2.2](https://stats.quantecon.org/#ols_ex2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54401f8",
+   "id": "42ca23b5",
    "metadata": {
     "hide-output": false
    },
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb44fd73",
+   "id": "fbcc9f7e",
    "metadata": {},
    "source": [
     "It is also possible to use `np.linalg.inv(X.T @ X) @ X.T @ y` to solve\n",
@@ -1033,7 +1033,7 @@
   }
  ],
  "metadata": {
-  "date": 1706493929.8142025,
+  "date": 1706589240.8504934,
   "filename": "ols.md",
   "kernelspec": {
    "display_name": "Python",
