--- a/prob_meaning.ipynb
+++ b/prob_meaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9d3bcc72",
+   "id": "db76d2a2",
    "metadata": {},
    "source": [
     "# Two Meanings of Probability"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e95e04",
+   "id": "326cb8b5",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb7fa78",
+   "id": "f416a45e",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1b105a0",
+   "id": "a7909b26",
    "metadata": {},
    "source": [
     "To answer our coding questions, we’ll start with some imports"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "021615cf",
+   "id": "4143c1a3",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3130758b",
+   "id": "6a065834",
    "metadata": {},
    "source": [
     "Empowered with these Python tools, we’ll now  explore the two meanings described above."
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b2cc3b8",
+   "id": "254acb1d",
    "metadata": {},
    "source": [
     "## Frequentist Interpretation\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29170932",
+   "id": "3fbd17f3",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -160,10 +160,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d60577e",
+   "id": "ecdfa685",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.1](https://python.quantecon.org/#pm_ex1)\n",
+    "## Solution to[ Exercise 7.1](https://stats.quantecon.org/#pm_ex1)\n",
     "\n",
     "Here is one solution:"
    ]
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b614a27",
+   "id": "281ec2f7",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507a2c0a",
+   "id": "baf6f0dc",
    "metadata": {
     "hide-output": false
    },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "414da3f8",
+   "id": "be7e7bfe",
    "metadata": {},
    "source": [
     "From the table above, can you see the law of large numbers at work?\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f97311f",
+   "id": "7181ec3a",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a71cf0",
+   "id": "c4523d25",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036e7dd7",
+   "id": "7626c783",
    "metadata": {},
    "source": [
     "**Comparison with different $ n $**\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe15751",
+   "id": "a9b84dc3",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3475c638",
+   "id": "44340d1a",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7276fe",
+   "id": "0f60c5c9",
    "metadata": {},
    "source": [
     "**Comparison with different $ I $**\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a964e736",
+   "id": "db1c9b8d",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93329d3a",
+   "id": "79b84d03",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1979231f",
+   "id": "02815f11",
    "metadata": {},
    "source": [
     "From the above graphs, we can see that **$ I $, the number of independent sequences,** plays an important role.\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176197d5",
+   "id": "9715417d",
    "metadata": {},
    "source": [
     "## Bayesian Interpretation\n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0cd0fb",
+   "id": "d663ab15",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -511,10 +511,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a67d97a4",
+   "id": "486eecab",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.2](https://python.quantecon.org/#pm_ex2)\n",
+    "## Solution to[ Exercise 7.2](https://stats.quantecon.org/#pm_ex2)\n",
     "\n",
     "**a)** Please write down the **likelihood function** and the **posterior** distribution for $ \\theta $ after observing  one flip of our coin.\n",
     "\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d6eed3",
+   "id": "092d532f",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4cd9f9",
+   "id": "ac286159",
    "metadata": {},
    "source": [
     "**d)** Please plot the posterior distribution for $ \\theta $ as a function of $ \\theta $ as $ n $ grows from $ 1, 2, \\ldots $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626dc8f4",
+   "id": "35983a41",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3332fba1",
+   "id": "4aaef60c",
    "metadata": {},
    "source": [
     "**e)** For various $ n $’s, please describe and compute  $ .05 $ and $ .95 $ quantiles for  posterior probabilities."
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "430a7723",
+   "id": "11fa164d",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e1fa24",
+   "id": "f8acdaf8",
    "metadata": {},
    "source": [
     "As $ n $ increases, we can see that Bayesian coverage intervals narrow and move toward $ 0.4 $.\n",
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bfc653e",
+   "id": "5b75fd77",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75cc3e8",
+   "id": "62579efb",
    "metadata": {},
    "source": [
     "Notice that in the graph above the posterior probabililty that $ \\theta \\in [.45, .55] $ typically exhibits a hump shape as $ n $ increases.\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c9bcb08",
+   "id": "fb2bde55",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ffb977f",
+   "id": "a5704dfb",
    "metadata": {},
    "source": [
     "As $ n $ increases, we can see that the probability density functions *concentrate* on $ 0.4 $, the true value of $ \\theta $.\n",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567515ae",
+   "id": "8f3fbaec",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae293170",
+   "id": "b38871c9",
    "metadata": {},
    "source": [
     "How shall we interpret the patterns above?\n",
@@ -882,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564d3075",
+   "id": "3431e394",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78cc464a",
+   "id": "8c977334",
    "metadata": {},
    "source": [
     "After observing a large number of outcomes, the  posterior distribution collapses around $ 0.4 $.\n",
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e4fcdb",
+   "id": "b84a2133",
    "metadata": {},
    "source": [
     "## Role of a Conjugate Prior\n",
@@ -947,15 +947,15 @@
     "A dignified response to that question is, well, it shouldn’t, but if you want to compute a posterior easily you’ll just be happier if your prior is conjugate to your likelihood.\n",
     "\n",
     "Otherwise, your posterior won’t have a convenient analytical form and you’ll be in the situation of wanting to\n",
-    "apply the Markov chain Monte Carlo techniques deployed in [this quantecon lecture](https://python.quantecon.org/bayes_nonconj.html).\n",
+    "apply the Markov chain Monte Carlo techniques deployed in [this quantecon lecture](https://stats.quantecon.org/bayes_nonconj.html).\n",
     "\n",
     "We also apply these powerful methods to approximating Bayesian posteriors for non-conjugate priors in\n",
-    "[this quantecon lecture](https://python.quantecon.org/ar1_bayes.html) and [this quantecon lecture](https://python.quantecon.org/ar1_turningpts.html)"
+    "[this quantecon lecture](https://stats.quantecon.org/ar1_bayes.html) and [this quantecon lecture](https://stats.quantecon.org/ar1_turningpts.html)"
    ]
   }
  ],
  "metadata": {
-  "date": 1706493930.1414871,
+  "date": 1706589241.1753738,
   "filename": "prob_meaning.md",
   "kernelspec": {
    "display_name": "Python",
