--- a/wald_friedman.ipynb
+++ b/wald_friedman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4ddcbbe",
+   "id": "f81588d9",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8837d87c",
+   "id": "88cfd3b5",
    "metadata": {},
    "source": [
     "# A Problem that Stumped Milton Friedman\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd7d85d",
+   "id": "83a603e8",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce102eec",
+   "id": "8616c7e6",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6829a5ba",
+   "id": "861c6982",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e01dad2e",
+   "id": "afba66c7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -70,7 +70,7 @@
     "Friedman and W. Allen Wallis during World War II when they were analysts at\n",
     "the U.S. Government’s  Statistical Research Group at Columbia University.\n",
     "\n",
-    "This problem led Abraham Wald [[Wal47](https://python.quantecon.org/zreferences.html#id99)] to formulate **sequential analysis**,\n",
+    "This problem led Abraham Wald [[Wal47](https://stats.quantecon.org/zreferences.html#id99)] to formulate **sequential analysis**,\n",
     "an approach to statistical decision problems intimately related to dynamic programming.\n",
     "\n",
     "In this lecture, we apply dynamic programming algorithms to Friedman and Wallis and Wald’s problem.\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78894354",
+   "id": "97dae41f",
    "metadata": {
     "hide-output": false
    },
@@ -110,29 +110,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f1c3ab",
+   "id": "da78b353",
    "metadata": {},
    "source": [
-    "This lecture uses ideas studied in [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), [this lecture](https://python.quantecon.org/likelihood_bayes.html).\n",
-    "and [this lecture](https://python.quantecon.org/exchangeable.html)."
+    "This lecture uses ideas studied in [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), [this lecture](https://stats.quantecon.org/likelihood_bayes.html).\n",
+    "and [this lecture](https://stats.quantecon.org/exchangeable.html)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d1f659f4",
+   "id": "7ab29e9a",
    "metadata": {},
    "source": [
     "## Origin of the Problem\n",
     "\n",
-    "On pages 137-139 of his 1998 book *Two Lucky People* with Rose Friedman [[FF98](https://python.quantecon.org/zreferences.html#id94)],\n",
+    "On pages 137-139 of his 1998 book *Two Lucky People* with Rose Friedman [[FF98](https://stats.quantecon.org/zreferences.html#id94)],\n",
     "Milton Friedman described a problem presented to him and Allen Wallis\n",
     "during World War II, when they worked at the US Government’s\n",
     "Statistical Research Group at Columbia University.\n",
     "\n",
     ">**Note**\n",
     ">\n",
-    ">See pages 25 and 26  of Allen Wallis’s 1980 article [[Wal80](https://python.quantecon.org/zreferences.html#id243)]  about the Statistical Research Group at Columbia University during World War II for his account of the episode and  for important contributions  that Harold Hotelling made to formulating the problem.   Also see  chapter 5 of Jennifer Burns book about\n",
-    "Milton Friedman [[Bur23](https://python.quantecon.org/zreferences.html#id244)].\n",
+    ">See pages 25 and 26  of Allen Wallis’s 1980 article [[Wal80](https://stats.quantecon.org/zreferences.html#id243)]  about the Statistical Research Group at Columbia University during World War II for his account of the episode and  for important contributions  that Harold Hotelling made to formulating the problem.   Also see  chapter 5 of Jennifer Burns book about\n",
+    "Milton Friedman [[Bur23](https://stats.quantecon.org/zreferences.html#id244)].\n",
     "\n",
     "Let’s listen to Milton Friedman tell us what happened\n",
     "\n",
@@ -168,20 +168,20 @@
     "Friedman and Wallis struggled with the problem but, after realizing that\n",
     "they were not able to solve it,  described the problem to  Abraham Wald.\n",
     "\n",
-    "That started Wald on the path that led him  to *Sequential Analysis* [[Wal47](https://python.quantecon.org/zreferences.html#id99)].\n",
+    "That started Wald on the path that led him  to *Sequential Analysis* [[Wal47](https://stats.quantecon.org/zreferences.html#id99)].\n",
     "\n",
     "We’ll formulate the problem using dynamic programming."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12f2d621",
+   "id": "cc998aed",
    "metadata": {},
    "source": [
     "## A Dynamic Programming Approach\n",
     "\n",
     "The following presentation of the problem closely follows Dmitri\n",
-    "Berskekas’s treatment in **Dynamic Programming and Stochastic Control** [[Ber75](https://python.quantecon.org/zreferences.html#id98)].\n",
+    "Berskekas’s treatment in **Dynamic Programming and Stochastic Control** [[Ber75](https://stats.quantecon.org/zreferences.html#id98)].\n",
     "\n",
     "A decision-maker can observe a sequence of draws of a random variable $ z $.\n",
     "\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b447428",
+   "id": "75d74b7c",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03fd75d",
+   "id": "8791612b",
    "metadata": {},
    "source": [
     "### Losses and Costs\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a04f388",
+   "id": "68f4ea8c",
    "metadata": {},
    "source": [
     "### Digression on Type I and Type II Errors\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f400552",
+   "id": "34480fd4",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -355,7 +355,7 @@
     "\n",
     "This reasoning suggests a decision rule such as the one shown in the figure\n",
     "\n",
-    "![https://python.quantecon.org/_static/lecture_specific/wald_friedman/wald_dec_rule.png](https://python.quantecon.org/_static/lecture_specific/wald_friedman/wald_dec_rule.png)\n",
+    "![https://stats.quantecon.org/_static/lecture_specific/wald_friedman/wald_dec_rule.png](https://stats.quantecon.org/_static/lecture_specific/wald_friedman/wald_dec_rule.png)\n",
     "\n",
     "  \n",
     "As we’ll see, this is indeed the correct form of the decision rule.\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65015dae",
+   "id": "e8cba151",
    "metadata": {},
    "source": [
     "### A Bellman Equation\n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62341662",
+   "id": "43bae143",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058c354b",
+   "id": "f0e80000",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a69cb91",
+   "id": "d09897a4",
    "metadata": {
     "hide-output": false
    },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b71dcfac",
+   "id": "eb006533",
    "metadata": {},
    "source": [
     "As in the [optimal growth lecture](https://quantecon.github.io/lecture-dynamics/optgrowth.html), to approximate a continuous value function\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a76940",
+   "id": "55b66c3c",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53de5dad",
+   "id": "b98cf391",
    "metadata": {},
    "source": [
     "To solve the key functional equation, we will iterate using `Q` to find the fixed point"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eb4424c",
+   "id": "c6ed0cd9",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c27987f",
+   "id": "197f0cbb",
    "metadata": {},
    "source": [
     "## Analysis\n",
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e58db629",
+   "id": "85f491fb",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9cc5d0",
+   "id": "7d4ff347",
    "metadata": {},
    "source": [
     "### Value Function\n",
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1877fcf0",
+   "id": "805b23b0",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6465b0de",
+   "id": "a6905c56",
    "metadata": {},
    "source": [
     "We will also set up a function to compute the cutoffs $ \\alpha $ and $ \\beta $\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947dff05",
+   "id": "04c4f5a4",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2223b15",
+   "id": "12068bb9",
    "metadata": {},
    "source": [
     "The cost function $ J $ equals $ \\pi L_1 $ for $ \\pi \\leq \\beta $, and $ (1-\\pi )L_0 $ for $ \\pi\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ffaf56",
+   "id": "447b6292",
    "metadata": {},
    "source": [
     "### Simulations\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3960621",
+   "id": "6c7616ff",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b46f10db",
+   "id": "a003250d",
    "metadata": {},
    "source": [
     "### Comparative Statics\n",
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb2d1947",
+   "id": "4bea70fa",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bec331c1",
+   "id": "18afc116",
    "metadata": {},
    "source": [
     "Increased cost per draw has induced the decision-maker to take fewer draws before deciding.\n",
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0b6698",
+   "id": "f3936513",
    "metadata": {},
    "source": [
     "### A Notebook Implementation\n",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c3d0d9",
+   "id": "413749fd",
    "metadata": {},
    "source": [
     "## Comparison with Neyman-Pearson Formulation\n",
@@ -1022,7 +1022,7 @@
     "Captail Schuyler to use what it knew to be a state-of-the-art\n",
     "Neyman-Pearson test.\n",
     "\n",
-    "We’ll rely on Abraham Wald’s [[Wal47](https://python.quantecon.org/zreferences.html#id99)] elegant summary of Neyman-Pearson theory.\n",
+    "We’ll rely on Abraham Wald’s [[Wal47](https://stats.quantecon.org/zreferences.html#id99)] elegant summary of Neyman-Pearson theory.\n",
     "\n",
     "For our purposes, watch for there features of the setup:\n",
     "\n",
@@ -1042,7 +1042,7 @@
     "  construction.  \n",
     "\n",
     "\n",
-    "In chapter 1 of **Sequential Analysis** [[Wal47](https://python.quantecon.org/zreferences.html#id99)] Abraham Wald summarizes the\n",
+    "In chapter 1 of **Sequential Analysis** [[Wal47](https://stats.quantecon.org/zreferences.html#id99)] Abraham Wald summarizes the\n",
     "Neyman-Pearson approach to hypothesis testing.\n",
     "\n",
     "Wald frames the problem as making a decision about a probability\n",
@@ -1182,28 +1182,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca395f0",
+   "id": "73db4ab4",
    "metadata": {},
    "source": [
     "## Sequels\n",
     "\n",
     "We’ll dig deeper into some of the ideas used here in the following lectures:\n",
     "\n",
-    "- [this lecture](https://python.quantecon.org/exchangeable.html) discusses the key concept of **exchangeability** that rationalizes statistical learning  \n",
-    "- [this lecture](https://python.quantecon.org/likelihood_ratio_process.html) describes **likelihood ratio processes** and their role in frequentist and Bayesian statistical theories  \n",
-    "- [this lecture](https://python.quantecon.org/likelihood_bayes.html) discusses the role of likelihood ratio processes in **Bayesian learning**  \n",
-    "- [this lecture](https://python.quantecon.org/navy_captain.html) returns to the subject of this lecture and studies whether the Captain’s hunch that the (frequentist) decision rule\n",
+    "- [this lecture](https://stats.quantecon.org/exchangeable.html) discusses the key concept of **exchangeability** that rationalizes statistical learning  \n",
+    "- [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html) describes **likelihood ratio processes** and their role in frequentist and Bayesian statistical theories  \n",
+    "- [this lecture](https://stats.quantecon.org/likelihood_bayes.html) discusses the role of likelihood ratio processes in **Bayesian learning**  \n",
+    "- [this lecture](https://stats.quantecon.org/navy_captain.html) returns to the subject of this lecture and studies whether the Captain’s hunch that the (frequentist) decision rule\n",
     "  that the Navy had ordered him to use can be expected to be better or worse than the rule sequential rule that Abraham Wald designed  \n",
     "\n",
     "\n",
     "<p><a id=f1 href=#f1-link><strong>[1]</strong></a> The decision maker acts as if he believes that the sequence of random variables\n",
     "$ [z_{0}, z_{1}, \\ldots] $ is *exchangeable*.  See [Exchangeability and Bayesian Updating](https://python.quantecon.org/exchangeable.html) and\n",
-    "[[Kre88](https://python.quantecon.org/zreferences.html#id97)] chapter 11, for  discussions of exchangeability."
+    "[[Kre88](https://stats.quantecon.org/zreferences.html#id97)] chapter 11, for  discussions of exchangeability."
    ]
   }
  ],
  "metadata": {
-  "date": 1706493930.310227,
+  "date": 1706589241.4608507,
   "filename": "wald_friedman.md",
   "kernelspec": {
    "display_name": "Python",
